--- a/translations/de/org.bonitasoft.studio.actors.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.actors.nl_de/messages_de.properties
@@ -195,15 +195,16 @@ importOrganizationSuccessfullTitle=Import erfolgreich
 importOrganizationSuccessfullMessage=Die Organisation wurde erfolgreich importiert.
 errorSelectionGroups=Sie k\u00f6nnen nur eine Gruppe oder ein verbundenes Element ausw\u00e4hlen.
 exportActorFilterTitle=Akteur-Filter exportieren
+addActor=Hinzuf\u00fcgen...
+initiator=Initiator
+newActor=Neuer Akteur
+actorWizardPageTitle=Neuen Akteur hinzuf\u00fcgen
 organizationHasBeenModifiedTitle=Warnung\: Organisation wurde modifiziert
 organizationHasBeenModifiedMessage={0} wurde ge\u00e4ndert. Es wird empfohlen, es erneut zu ver\u00f6ffentlichen. M\u00f6chten Sie es jetzt tun?
 doNotDisplayAgain=Wird nicht erneut angezeigt.
 userDoesntExistAnymoreTitle=Organisation ist wurde nicht ver\u00f6ffentlicht
 userDoesntExistAnymore=Organisation ist wurde nicht ver\u00f6ffentlicht. Der Standard-Benutzer {0} ist nicht mehr vorhanden. Bitte konfigurieren Sie einen weiteren Standard-Benutzer im Men\u00fc "Organisation/ver\u00f6ffentlichen...".
-addActor=Hinzuf\u00fcgen...
-initiator=Initiator
-newActor=Neuer Akteur
-actorWizardPageTitle=Neuen Akteur hinzuf\u00fcgen
 UserDoesntExistError=Benutzer {0} ist in der aktuellen Organisation nicht vorhanden. Bitte geben Sie einen anderen Benutzernamen an.
-
+updateActorReferences=Updating actor references...
+refactoringActorMappings=Refactoring actor mappings...
 
