--- a/translations/de/org.bonitasoft.studio.common.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.common.nl_de/messages_de.properties
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=Diagrammname oder Diagrammversion muss ge\u00e
 bonitaName=Bonita
 bosProductName=Bonita BPM
 bosSPProductName=Bonita BPM Subscription
-bonitaStudioModuleName=Bonita Studio
+bonitaStudioModuleName=Bonita BPM Studio
 bonitaPortalModuleName=Bonita BPM Portal
-bonitaEngineModuleName=Bonita-Engine
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=BonitaSoft
 bonitaBPMCommunity=Bonita BPM Community
 bonitaBPMTeamworkSubscription=Bonita BPM Teamwork Subscription
@@ -287,4 +287,13 @@ toolAlignHorizontalDesc=W\u00e4hlen Sie die Shapes, die auf einer horizontalen A
 toolAlignVertical=Vertikales Ausrichten
 toolAlignVerticalDesc=W\u00e4hlen Sie die Shapes, die auf einer vertikalen Achse ausrichtet werden sollen.
 fieldIsTooShort={0} zu kurz. Die Mindestanzahl Zeichen betr\u00e4gt {1}
+currentScript=Original Source
+refactoredScript=Refactored Source
+refactorTitle=Refactor {0}
+reviewChangesMessageRefactoring=Replacing {0} by {1} might cause minor errors in scripts and conditions.\nDouble click a script name to review and edit changes. Click Cancel to cancel the name change.
+reviewChangesMessageRemoving={0} has been removed from all scripts and conditions.\nDouble click a script name to review and edit changes. Click Cancel to cancel the remove operation.
+deleteFormFieldDialogTitle=Sind Sie sicher?
+askConfirmationForDeleting=Do you really want to remove the following data\: {0}
+removingWidgetReferences=Removing widget references...
+removeTitle=Remove {0}
 
