--- a/translations/de/org.bonitasoft.studio.common.repository.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.common.repository.nl_de/messages_de.properties
@@ -18,7 +18,7 @@ invalidArchive=Die ausgew\u00e4hlte Datei ist kein g\u00fcltiges {0}-Archiv
 invalidFileFormat=Ung\u00fcltiges Dateiformat
 browseRepository=Repositorys durchsuchen
 destinationPathMustBeADirectory=Der Zielpfad muss ein Verzeichnis sein
-exportFinishMessage=Export erfolgreich beendet
+exportFinishMessage=Export finished successfully to {0}
 exportLabel=Exportergebnis
 current=Aktuell
 readOnlyFileTitle=Schreibgesch\u00fctzte Datei
