--- a/translations/de/org.bonitasoft.studio.connectors.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.connectors.nl_de/messages_de.properties
@@ -35,7 +35,7 @@ selectAConnectorDefWarning=W\u00e4hlen Sie eine Konnektor-Definition, um fortzuf
 connectorOutpuTypeLabel=Konnektor-Ausgabe
 name=Name
 returnType=R\u00fcckgabetyp
-remove=Entfernen
+remove=L\u00f6schen
 selectConnectorDefinitionTitle=Konnektor-Definition w\u00e4hlen
 selectConnectorDefinitionDesc=W\u00e4hlen Sie eine Konnektor-Definition aus der folgenden Liste
 search=Suche...
@@ -130,4 +130,5 @@ nRowsNColsOutputHint=Hinweis\: Erwarteter R\u00fcckgabetyp ist eine "Liste der L
 alwaysUseScriptingModeOutputPref=Verwenden Sie immer die Skripting-Modus-Ausgabe (blenden Sie Ausgabe Modus der Auswahlseite w\u00e4hrend der Konfiguration aus)
 unsuportedExpressionTypeForTesting=Nicht unterst\u00fctzter Ausdruck f\u00fcr das Testen\:
 unresolvedPatternOrScriptExpression=Eingabeparameter {0} verwendet einen Ausdruck mit einer nicht aufrufbaren Referenz
-unresolvedExpression=Eingabeparameter {0} verwendet einen nicht aufrufbaren Ausdruck
+unresolvedExpression=Input parameter {0} uses an unreachable Expression
+deleteConnectorDefinition=Do you want to delete the connector definition {0} and the associated implementation(s) and saved configuration(s)?
