--- a/translations/de/org.bonitasoft.studio.data.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.data.nl_de/messages_de.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=Kein Element oder zu viele Elemente wurden ausgew\u00e
 moveDataWizardTitle=Daten verschieben
 moveDataWizardMessage=Daten zu einer Aktivit\u00e4t oder einem Prozess verschieben
 deleteDataDialogTitle=Sind Sie sicher?
-deleteDialogConfirmMessage=M\u00f6chten Sie die folgenden Daten wirklich l\u00f6schen\:
+deleteDialogConfirmMessage=Do you really want to remove the following data\:
 moveData=Verschieben...
 moveData_tooltip=Die Daten zu einem anderen Element verschieben
 dataNameIsEmpty=Name ist leer
@@ -81,3 +81,5 @@ documentType=Dokument
 documentReferenceType=Referenz des Dokuments
 xmlDefaultValueTooLongTitle=XML-Input zu gro\u00df
 xmlDefaultValueTooLongMessage=Die durchsuchte XML-Datei ist zu gro\u00df, um als Standardwert verwendet zu werden
+editVariableTitle=Edit a variable
+editVariableDescription=When you click OK, if the variable is used in a Groovy script, the refactor window is displayed and you can validate the changes.
