--- a/translations/de/org.bonitasoft.studio.diagram.form.properties.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.diagram.form.properties.nl_de/messages_de.properties
@@ -172,6 +172,10 @@ modifierDescription=Ein Modifier kann verwendet werden, um den Ausgabetyp eines 
 newDocumentNameHint=Gibt den neuen Dokumentennamen zur\u00fcck
 multipleExplanation=Ein Ausdruck, der eine Liste mit Dokumentennamen oder eine Liste mit URLs zur\u00fcckgibt
 generateFromEnumTooltip=Generieren Sie Ausdruck aus einer Optionsliste...
-Action_SelectedValue=Ausgew\u00e4hlter Wert
+Action_SelectedValue=Ausgew\u00e4hlter Wert  
 dateWidgetReturnTypeWarning=Die Verwendung eines Strings oder eines Datenr\u00fcckgabetyps wird empfohlen.
 widgetNameAllreadyExistError={0} ist bereits vorhanden. Bitte geben Sie einen anderen Widget-Namen an.
+widgetEditMessage=When you click OK, if the current name is used in Groovy scripts, \nthe refactor window is displayed and you can validate the changes.
+editWidgetNameTitle=Choose a new name 
+removingWidgetReferences=Removing widget references...
+
