--- a/translations/de/org.bonitasoft.studio.engine.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.engine.nl_de/messages_de.properties
@@ -15,7 +15,7 @@ RunButtonLabel=Ausf\u00fchren
 engineConfigurations=Engine-Konfigurationen
 defaultConfiguration=Standardkonfiguration
 exporting=Exportieren... 
-exportSuccessTitle=Build
+exportSuccessTitle=Build successful
 exportSuccessMsg=Build wurde erfolgreich beendet\!
 initializingUserXP=Portal wird initialisiert...
 waitingForEngineToStart=Erste Ausf\u00fchrung\: Engine wird geladen, bitte warten...
