--- a/translations/de/org.bonitasoft.studio.intro.nl_de/plugin_de.properties
+++ b/translations/de/org.bonitasoft.studio.intro.nl_de/plugin_de.properties
@@ -1,3 +1,3 @@
 #X-Generator: crowdin.net
-openWelcomePage_label=Willkommen bei Bonita BPM Studio
+openWelcomePage_label=Willkommen bei Bonita Studio
 
