--- a/translations/de/org.bonitasoft.studio.properties.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.properties.nl_de/messages_de.properties
@@ -330,4 +330,6 @@ generateFixedDateLabel=Generieren eines Ausdrucks f\u00fcr ein festes Datum
 selectDurationLabel=W\u00e4hlen Sie eine Dauer
 generateDurationLabel=Generieren Sie einen Dauer-Ausdruck
 notAValidInput=Wert [{0}] ist keine g\u00fcltige Eingabe
-
+transientDataWarning=Please note that transient data in activity operations will not be supported in future versions. 
+errorDisplayLabelMaxLength=Display text is too long. Maximum number of characters is {0}.
+warningDisplayLabelMaxLength=Maximum number of characters is {0} for display label, {1} for descriptions.
