--- a/translations/de/org.bonitasoft.studio.validation.nl_de/messages_de.properties
+++ b/translations/de/org.bonitasoft.studio.validation.nl_de/messages_de.properties
@@ -62,4 +62,8 @@ unresolvedPatternDependenciesFor=Ungel\u00f6ste Abh\u00e4ngigkeit {0} f\u00fcr M
 unsupportedReturnTypeForAvailableValuesOf=Nicht unterst\u00fctzter R\u00fcckgabetyp {1} f\u00fcr verf\u00fcgbaren Werteausdruck des Widgets {0}
 incomingTransitionNotSupported=Eingehende Transition(en) f\u00fcr dieses Element nicht unterst\u00fctzt
 outgoingTransitionNotSupported=Eingehende Transition(en) f\u00fcr dieses Element nicht unterst\u00fctzt
-Validation_StartMessageEventWithCorrelation=Korrelation mit Start-Nachricht-Ereignis kann nicht behandelt werden
+Validation_StartMessageEventWithCorrelation=Start message event with correlation not supported
+Validation_noConnectorDefFound=The definition {1} of connector {0} no longer exists.
+Validation_noActorFilterDefFound=The definition {1} of actor filter {0} no longer exists.
+invalidParalellMergeConstraints=All incoming transitions must come from the same gateway (explicit or implicit)
+
