--- a/translations/es/org.bonitasoft.studio.application.nl_es/plugin_es.properties
+++ b/translations/es/org.bonitasoft.studio.application.nl_es/plugin_es.properties
@@ -42,6 +42,6 @@ normal=Normal
 fullscreen=Pantalla completa
 Refresh=Refrescar
 Preview=Vista Previa
-TreeOverView=Tree View
+TreeOverView=Vista en Arbol
 online_documentation=Documentaci\u00f3n online
 RecentlyModified=Modificado recientemente
