--- a/translations/es/org.bonitasoft.studio.common.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.common.nl_es/messages_es.properties
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=Debe cambiar el nombre de diagrama o esquema v
 bonitaName=Bonita
 bosProductName=Bonita BPM
 bosSPProductName=Suscripci\u00f3n de Bonita BPM
-bonitaStudioModuleName=Bonita Studio
+bonitaStudioModuleName=Bonita BPM Studio
 bonitaPortalModuleName=Bonita BPM Portal
-bonitaEngineModuleName=Bonita Engine
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=BonitaSoft
 bonitaBPMCommunity=Comunidad Bonita BPM
 bonitaBPMTeamworkSubscription=Suscripci\u00f3n Bonita BPM Teamwork
@@ -290,8 +290,10 @@ fieldIsTooShort={0} es demasiado corto. El n\u00famero m\u00ednimo de caracteres
 currentScript=script original
 refactoredScript=Script revisado
 refactorTitle=Refactorizar {0}
-reviewChangesMessageRefactoring=Reemplazar {0} por {1} puede causar errores menores en los scripts y condiciones. \nHaga doble clic en el nombre de un script para revisar los cambios. Haga clic en Cancelar para cancelar el cambio de nombre.
-reviewChangesMessageRemoving={0} ha sido eliminado de todos los scripts y condiciones. \nHaga doble clic en el nombre del script para revisar los cambios. Haga clic en Cancelar para cancelar la operación de borrado.
-askConfirmationForDeleting=¿Realmente desea borrar los datos siguientes \: {0}
+reviewChangesMessageRefactoring=Reemplazar {0} por {1} puede causar errores menores en los scripts y condiciones. \\nHaga doble clic en el nombre de un script para revisar los cambios. Haga clic en Cancelar para cancelar el cambio de nombre.
+reviewChangesMessageRemoving={0} ha sido eliminado de todos los scripts y condiciones.\\nHaga doble clic en el nombre del script para revisar los cambios. Haga clic en Cancelar para cancelar la operaci\u00f3n de borrado.
+deleteFormFieldDialogTitle=\u00bfEst\u00e1 seguro?
+askConfirmationForDeleting=\u00bfRealmente desea borrar los datos siguientes \\\: {0}
 removingWidgetReferences=Eliminando referencias al widget...
 removeTitle=Eliminar {0}
+
