--- a/translations/es/org.bonitasoft.studio.common.repository.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.common.repository.nl_es/messages_es.properties
@@ -18,7 +18,7 @@ invalidArchive=El archivo seleccionado no es un {0} archivo v\u00e1lido
 invalidFileFormat=Formato del archivo inv\u00e1lido
 browseRepository=Explorar repositorios
 destinationPathMustBeADirectory=Ruta de destino debe ser un directorio
-exportFinishMessage=Exportaci\u00f3n ha finalizado correctamente
+exportFinishMessage=Exportaci\u00f3n terminada con \u00e9xito en {0}
 exportLabel=Exportar resultado
 current=Actual
 readOnlyFileTitle=Archivo de s\u00f3lo lectura
