--- a/translations/es/org.bonitasoft.studio.connectors.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.connectors.nl_es/messages_es.properties
@@ -35,7 +35,7 @@ selectAConnectorDefWarning=Seleccione una definici\u00f3n de conector para conti
 connectorOutpuTypeLabel=salida de conector
 name=Nombre
 returnType=tipo de retorno
-remove=Suprimir
+remove=Eliminar
 selectConnectorDefinitionTitle=Seleccione una definici\u00f3n de conector
 selectConnectorDefinitionDesc=Seleccione una definici\u00f3n conector de la siguiente lista
 search=B\u00fasqueda...
@@ -130,4 +130,5 @@ nRowsNColsOutputHint=Nota\: El tipo de retorno esperado es "List<List>".
 alwaysUseScriptingModeOutputPref=Utilice siempre el modo de scripting (oculte el modo de selecci\u00f3n de p\u00e1gina durante la configuraci\u00f3n)
 unsuportedExpressionTypeForTesting=Tipo de expresi\u00f3n no admitido para la prueba\:
 unresolvedPatternOrScriptExpression=Par\u00e1metro de entrada {0} est\u00e1 usando una expresi\u00f3n que contiene una referencia inalcanzable
-unresolvedExpression=Par\u00e1metro de entrada {0} esta usando una expresi\u00f3n inalcanzable
+unresolvedExpression=El par\u00e1metro de entrada {0} esta usando una expresi\u00f3n inalcanzable
+deleteConnectorDefinition=\u00bfQuiere eliminar la definici\u00f3n del conector {0} y la(s) implementacione(s) asociada(s) y sus configuracione(s) guardada(s)?
