--- a/translations/es/org.bonitasoft.studio.data.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.data.nl_es/messages_es.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=Ning\u00fan elemento o demasiados elementos fueron sel
 moveDataWizardTitle=Mover datos
 moveDataWizardMessage=Mover los datos a una actividad o al proceso
 deleteDataDialogTitle=\u00bfEst\u00e1 seguro?
-deleteDialogConfirmMessage=\u00bfDesea realmente eliminar los siguientes datos\:
+deleteDialogConfirmMessage=\u00bfRealmente desea borrar los siguientes datos \\\: {0}
 moveData=Mover...
 moveData_tooltip=Mover los datos a un otro elemento
 dataNameIsEmpty=El nombre est\u00e1 vac\u00edo
@@ -82,5 +82,4 @@ documentReferenceType=Documento de referencia
 xmlDefaultValueTooLongTitle=XML de entrada demasiado grande
 xmlDefaultValueTooLongMessage=El archivo XML explorado es demasiado grande para ser utilizado como valor predeterminado
 editVariableTitle=Edita la variable
-editVariableDescription=Al hacer clic en Aceptar, si la variable se utilizara en un script de Groovy, se mostrará la ventana de refactorización y podrá confirmar los cambios.
-deleteDialogConfirmMessage=¿Realmente desea borrar los siguientes datos \: {0}
+editVariableDescription=Al hacer clic en Aceptar, si la variable se utilizara en un script de Groovy, se mostrar\u00e1 la ventana de refactorizaci\u00f3n y podr\u00e1 confirmar los cambios.
