--- a/translations/es/org.bonitasoft.studio.diagram.custom.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.diagram.custom.nl_es/messages_es.properties
@@ -48,6 +48,6 @@ updatingReferences=Actualizaci\u00f3n de referencias...
 GridRulerPreferencePage_showGrid_label=Mostrar cuadr\u00edcula para los nuevos diagramas
 GridRulerPreferencePage_gridGroup_label=Opciones de cuadricula
 GridRulerPreferencePage_snapToGrid_label=Ajustar a la cuadr\u00edcula para los nuevos diagramas
-GridRulerPreferencePage_snapToGeometry_label=Ajustar a las formas para los diagramas de nuevos
+GridRulerPreferencePage_snapToGeometry_label=Ajustar a las formas para los nuevos diagramas
 GridRulerPreferencePage_gridSpacing_label_cm=Espaciado de la cuadr\u00edcula (en cent\u00edmetros)
 extractAsSubprocessNewPoolName=Subproceso_extraido
