--- a/translations/es/org.bonitasoft.studio.diagram.form.properties.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.diagram.form.properties.nl_es/messages_es.properties
@@ -172,10 +172,10 @@ modifierDescription=Un modificador puede utilizarse para transformar el tipo de 
 newDocumentNameHint=Devuelve el nombre del nuevo documento
 multipleExplanation=Expresi\u00f3n devolver una lista de nombres del documento o una lista de direcciones URL
 generateFromEnumTooltip=Generar la expresi\u00f3n de una lista de opciones...
-Action_SelectedValue=Valor seleccionado
+Action_SelectedValue=Valor seleccionado  
 dateWidgetReturnTypeWarning=Se recomienda usar una cadena o tipo de valor devuelto de una fecha
 widgetNameAllreadyExistError={0} existe actualmente . Por favor introduzca otro nombre al widget.
-widgetEditMessage=Al hacer clic en Aceptar, si el nombre actual se utilizara en un script de Groovy, se mostrará la ventana de refactorización y podrá confirmar los cambios.
-editWidgetNameTitle=Wählen Sie einen neuen Namen
+widgetEditMessage=Al hacer clic en Aceptar, si el nombre actual se utilizara en un script de Groovy, se mostrar\u00e1 la ventana de refactorizaci\u00f3n y podr\u00e1 confirmar los cambios.
+editWidgetNameTitle=Elija un nuevo nombre
 removingWidgetReferences=Eliminando referencias al widget...
 
