--- a/translations/es/org.bonitasoft.studio.engine.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.engine.nl_es/messages_es.properties
@@ -15,7 +15,7 @@ RunButtonLabel=Ejecutar
 engineConfigurations=configuraciones del motor
 defaultConfiguration=Configuraci\u00f3n por defecto
 exporting=Exportando... 
-exportSuccessTitle=compilación satisfactoria
+exportSuccessTitle=compilaci\u00f3n satisfactoria
 exportSuccessMsg=Build ha terminado con \u00e9xito\!
 initializingUserXP=Iniciando Portal ...
 waitingForEngineToStart=Primera carrera\: la espera de motor para cargar ..
