--- a/translations/es/org.bonitasoft.studio.properties.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.properties.nl_es/messages_es.properties
@@ -61,11 +61,11 @@ connectionConnection=Condici\u00f3n
 ResourceSection_ProcessTemplate=Plantilla de proceso
 ResourceSection_PageTemplate=Plantilla Global de p\u00e1gina
 ResourceSection_ErrorTemplate=P\u00e1gina de Error
-ResourceSection_ProcessTemplate_hint=Dise\u00f1o que se usa alrededor de todas las formas del proceso
-ResourceSection_PageTemplate_hint=Plantilla utilizada para generar las p\u00e1ginas de entrada de las formas
+ResourceSection_ProcessTemplate_hint=Dise\u00f1o que se usa alrededor de todas los formularios del proceso
+ResourceSection_PageTemplate_hint=Plantilla utilizada para generar los formularios de entrada
 ResourceSection_ErrorTemplate_hint=Dise\u00f1o que se usa para mostrar un mensaje de error
 ResourceSection_HostPageTemplate_hint=Recipiente de proceso para a\u00f1adir alg\u00fan contenido en torno al proceso de dise\u00f1o y algunos recursos (Javascript. ..)
-ResourceSection_ViewTemplate_hint=Plantilla utilizada para generar las p\u00e1ginas de entrada de las formas
+ResourceSection_ViewTemplate_hint=Plantilla utilizada para generar los formularios de resumen
 ResourceSection_LoginPage=P\u00e1gina de Autenticaci\u00f3n
 Browse=Buscar...
 Clear=Limpiar
@@ -330,4 +330,6 @@ generateFixedDateLabel=Generar la expresi\u00f3n de fecha fija
 selectDurationLabel=Seleccione una duraci\u00f3n
 generateDurationLabel=Generar la expresi\u00f3n de duraci\u00f3n
 notAValidInput=El valor [{0}] no es una entrada valida
-
+transientDataWarning=Por favor, tenga en cuenta de que se dejar\u00e1 de soportar los datos transitorios en las operaciones de actividades en las versiones siguientes.
+errorDisplayLabelMaxLength=El texto es demasiado largo. El n\u00famero m\u00e1ximo de caracteres es {0}.
+warningDisplayLabelMaxLength=El n\u00famero m\u00e1ximo de caracteres es {0} para la muestra de etiqueta, {1} para descripciones.
