--- a/translations/es/org.bonitasoft.studio.validation.nl_es/messages_es.properties
+++ b/translations/es/org.bonitasoft.studio.validation.nl_es/messages_es.properties
@@ -62,7 +62,8 @@ unresolvedPatternDependenciesFor=Dependencia {0} no resuelta para el patr\u00f3n
 unsupportedReturnTypeForAvailableValuesOf=El tipo de retorno {1} no esta soportado para los valores disponibles de la expresi\u00f3n del widget {0}
 incomingTransitionNotSupported=La transici\u00f3n siguiente no admite este elemento
 outgoingTransitionNotSupported=La transici\u00f3n siguiente no admite este elemento
-Validation_StartMessageEventWithCorrelation=La correlación no es compatible con mensajes de inicio
-Validation_noConnectorDefFound=La definición {1} del conector {0} ya no existe.
-Validation_noActorFilterDefFound=La definición {1} del filtro de actor {0} ya no existe.
-invalidParalellMergeConstraints=Todas las transiciones entrantes deben provenir de la misma compuerta (explícita o implícita)
+Validation_StartMessageEventWithCorrelation=La correlaci\u00f3n no es compatible con mensajes de inicio
+Validation_noConnectorDefFound=La definici\u00f3n {1} del conector {0} ya no existe.
+Validation_noActorFilterDefFound=La definici\u00f3n {1} del filtro de actor {0} ya no existe.
+invalidParalellMergeConstraints=Todas las transiciones entrantes deben provenir de la misma compuerta (expl\u00edcita o impl\u00edcita)
+
