--- a/translations/fr/org.bonitasoft.studio.common.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.common.nl_fr/messages_fr.properties
@@ -8,7 +8,7 @@ SubmitFormButtonDefaultLabel=Soumettre
 PreviousFormButtonDefaultLabel=Page pr\u00e9c\u00e9dente
 NextFormButtonDefaultLabel=Page suivante
 CustomizedFormButtonDefaultLabel=Personnalis\u00e9
-startEventDefaultName=D\u00e9marrer
+startEventDefaultName=D\u00e9but
 endEventDefaultName=Fin
 PoolDefaultName=Pool
 intermeiateTimerEventDefaultName=Minuterie
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=Nom du diagrame ou de la version de sch\u00e9m
 bonitaName=Bonita
 bosProductName=Bonita BPM
 bosSPProductName=Bonita BPM Subscription
-bonitaStudioModuleName=Bonita Studio
+bonitaStudioModuleName=Bonita BPM Studio
 bonitaPortalModuleName=Bonita BPM Portal
-bonitaEngineModuleName=Bonita Engine
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=Bonitasoft
 bonitaBPMCommunity=Bonita BPM Communaut\u00e9
 bonitaBPMTeamworkSubscription=Bonita BPM Teamwork Subscription
@@ -288,10 +288,12 @@ toolAlignVertical=Aligner verticalement
 toolAlignVerticalDesc=S\u00e9lectionnez les \u00e9l\u00e9ments \u00e0 aligner sur l'axe vertical.
 fieldIsTooShort={0} est trop court. Le nombre de caract\u00e8res minimum est {1}
 currentScript=Source originale
-refactoredScript=Source remaniée
+refactoredScript=Source originale
 refactorTitle=Refactor {0}
-reviewChangesMessageRefactoring=Remplacer {0} par {1} peut provoquer des erreurs mineures sur les scripts et les conditions. \nDouble-cliquez sur un nom de script afin de revoir les changements. Cliquez sur Annuler pour annuler le changement de nom.
-reviewChangesMessageRemoving={0} a été supprimé de tous les scripts et les conditions. \nDouble-cliquez sur un nom de script afin de revoir les changements. Cliquez sur Annuler pour annuler l'opération de suppression.
-askConfirmationForDeleting=Voulez-vous vraiment supprimer les données suivantes\: {0}
-removingWidgetReferences=Suppression des références de widget...
-removeTitle=Supprimer {0}
+reviewChangesMessageRefactoring=Remplacer {0} par {1} peut provoquer des erreurs mineures sur les scripts et les conditions. Double-cliquez sur un nom de script afin de revoir les changements. Cliquez sur Annuler pour annuler le changement de nom.
+reviewChangesMessageRemoving={0} a \u00e9t\u00e9 supprim\u00e9 de tous les scripts et les conditions. Double-cliquez sur un nom de script afin de revoir les changements. Cliquez sur Annuler pour annuler l'op\u00e9ration de suppression.
+deleteFormFieldDialogTitle=Etes-vous s\u00fbre ?
+askConfirmationForDeleting=Voulez-vous vraiment supprimer les donn\u00e9es suivantes\\\: {0}
+removingWidgetReferences=Suppression des r\u00e9f\u00e9rences de widget...
+removeTitle=Suppression de {0}
+
