--- a/translations/fr/org.bonitasoft.studio.connectors.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.connectors.nl_fr/messages_fr.properties
@@ -131,3 +131,4 @@ alwaysUseScriptingModeOutputPref=Toujours utiliser la sortie du mode "Script" (m
 unsuportedExpressionTypeForTesting=Ce type d'expression n'est pas pris en charge pour les tests
 unresolvedPatternOrScriptExpression=Le param\u00e8tre d'entr\u00e9e {0} utilise une expression contenant une r\u00e9f\u00e9rence inaccessible
 unresolvedExpression=Le param\u00e8tre d'entr\u00e9e {0} utilise une expression inaccessible
+deleteConnectorDefinition=Voulez-vous vraiment supprimer la d\u00e9finition de connecteur {0} et l'impl\u00e9mentation associ\u00e9e et ou les configurations sauvegard\u00e9es ?
