--- a/translations/fr/org.bonitasoft.studio.data.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.data.nl_fr/messages_fr.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=Aucun \u00e9l\u00e9ment ou trop d'\u00e9l\u00e9ments o
 moveDataWizardTitle=D\u00e9placer des variables
 moveDataWizardMessage=D\u00e9placer une variable vers une activit\u00e9 ou un processus
 deleteDataDialogTitle=Etes-vous s\u00fbre ?
-deleteDialogConfirmMessage=Voulez-vous vraiment supprimer les donn\u00e9es suivantes \:
+deleteDialogConfirmMessage=Voulez-vous vraiment supprimer les donn\u00e9es suivantes\\\: {0}
 moveData=D\u00e9placer...
 moveData_tooltip=D\u00e9placer les variables vers un autre \u00e9l\u00e9ment
 dataNameIsEmpty=Le nom est vide
@@ -81,6 +81,5 @@ documentType=Document
 documentReferenceType=R\u00e9f\u00e9rence du document
 xmlDefaultValueTooLongTitle=L'entr\u00e9e XML est trop grande
 xmlDefaultValueTooLongMessage=Le fichier XML parcourue est trop grand pour \u00eatre utilis\u00e9 comme valeur par d\u00e9faut
-editVariableTitle=Editer une variable
-editVariableDescription=Lorsque vous cliquez sur OK, si la variable est utilisée dans un script Groovy, la fenêtre de refactor s'affiche et vous pouvez valider les modifications.
-deleteDialogConfirmMessage=Voulez-vous vraiment supprimer les données suivantes\: {0}
+editVariableTitle=Modifier une donn\u00e9e
+editVariableDescription=Lorsque vous cliquez sur OK, si la variable est utilis\u00e9e dans un script Groovy, la fen\u00eatre de refactor s'affiche et vous pouvez valider les modifications.
