--- a/translations/fr/org.bonitasoft.studio.engine.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.engine.nl_fr/messages_fr.properties
@@ -15,7 +15,7 @@ RunButtonLabel=Lancer
 engineConfigurations=Configurations du moteur
 defaultConfiguration=Configuration par d\u00e9faut
 exporting=Export... 
-exportSuccessTitle=Compilation réussie
+exportSuccessTitle=Compilation r\u00e9ussie
 exportSuccessMsg=Build termin\u00e9 avec succ\u00e8s \!
 initializingUserXP=Initialisation du portail...
 waitingForEngineToStart=Premier lancement \: en attente du moteur... 
@@ -60,5 +60,5 @@ noBrowserFoundMsg=Le portail ne peut pas \u00eatre lanc\u00e9 car aucun navigate
 cannotStartTomcatTitle=Tomcat ne peut pas \u00eatre lanc\u00e9
 cannotStartTomcatMessage=Le serveur Tomcat ne peut pas \u00eatre lanc\u00e9 \: le port est peut-\u00eatre d\u00e9j\u00e0 utilis\u00e9 par une autre application. Il est possible qu'un autre Studio ou un autre serveur Tomcat soit d\u00e9j\u00e0 en cours d'ex\u00e9cution.
 noInitiatorDefinedTitle=Aucun initiateur d\u00e9finie
-noInitiatorDefinedMessage=Aucun initiateur du processus d\u00e9fini pour {0}. Vous allez \u00eatre redirig\u00e9 vers Bonita BPM Portal.
+noInitiatorDefinedMessage=Aucun initiateur de processus d\u00e9fini pour {0}. Vous allez \u00eatre redirig\u00e9 vers Bonita BPM Portal.
 dontaskagain=Ne pas afficher la prochaine fois
