--- a/translations/fr/org.bonitasoft.studio.properties.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.properties.nl_fr/messages_fr.properties
@@ -43,7 +43,7 @@ removeForm=Supprimer
 editForm=Modifier
 formUp=Monter
 formDown=Descendre
-selectAll=Tout s\u00e9lectionner 
+selectAll=Tout s\u00e9lectionner
 unselectAll=Tout d\u00e9s\u00e9lectionner
 formAddFormCommandDescription=Ajouter un formulaire
 formAddFormCommandLabel=Ajouter un formulaire
@@ -330,4 +330,6 @@ generateFixedDateLabel=G\u00e9n\u00e9rer l'expression d'une date
 selectDurationLabel=S\u00e9lectionnez une dur\u00e9e
 generateDurationLabel=G\u00e9n\u00e9rer l'expression d'une dur\u00e9e
 notAValidInput=La valeur [{0}] n'est pas une entr\u00e9e valide
-
+transientDataWarning=Veuillez noter que les donn\u00e9es transitoires utilis\u00e9es dans les op\u00e9rations de tache ne seront plus prises en charge \u00e0 l'avenir. 
+errorDisplayLabelMaxLength=Le texte \u00e0 afficher est trop long. Le nombre maximal de caract\u00e8res est {0}.
+warningDisplayLabelMaxLength=Le nombre maximal de caract\u00e8res est de {0} pour l'affichage du label, de {1} pour les descriptions.
