--- a/translations/fr/org.bonitasoft.studio.validation.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.validation.nl_fr/messages_fr.properties
@@ -62,7 +62,8 @@ unresolvedPatternDependenciesFor=D\u00e9pendance non r\u00e9solue {0} pour l'exp
 unsupportedReturnTypeForAvailableValuesOf=Type de retour {1} non support\u00e9 pour l'expression des valeurs possibles du champ {0}
 incomingTransitionNotSupported=Les transistions entrantes ne sont pas support\u00e9es pour cet \u00e9l\u00e9ment
 outgoingTransitionNotSupported=Les transistions entrantes ne sont pas support\u00e9es pour cet \u00e9l\u00e9ment
-Validation_StartMessageEventWithCorrelation=La corrélation n'est pas supporté avec les évènements de début de message
-Validation_noConnectorDefFound=La définition {1} du connecteur {0} n'existe plus.
-Validation_noActorFilterDefFound=La définition {1} de filtre acteur {0} n'existe plus.
-invalidParalellMergeConstraints=Toutes les transitions entrantes doivent provenir de la même passerelle (explicite ou implicite)
+Validation_StartMessageEventWithCorrelation=La corr\u00e9lation n'est pas support\u00e9e pour les messages de d\u00e9but
+Validation_noConnectorDefFound=La d\u00e9finition {1} du connecteur {0} n'existe plus.
+Validation_noActorFilterDefFound=La d\u00e9finition {1} de filtre acteur {0} n'existe plus.
+invalidParalellMergeConstraints=Toutes les transitions entrantes doivent provenir de la m\u00eame passerelle (explicite ou implicite)
+
