--- a/translations/it/org.bonitasoft.studio.common.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.common.nl_it/messages_it.properties
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=Il nome o la versione del diagramma devono ess
 bonitaName=Bonita
 bosProductName=Bonita BPM
 bosSPProductName=Bonita BPM Subscription
-bonitaStudioModuleName=Bonita Studio
+bonitaStudioModuleName=Bonita BPM Studio
 bonitaPortalModuleName=Bonita BPM Portal
-bonitaEngineModuleName=Bonita Engine
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=BonitaSoft
 bonitaBPMCommunity=Bonita BPM Community
 bonitaBPMTeamworkSubscription=Bonita BPM Teamwork Subscription
@@ -290,8 +290,10 @@ fieldIsTooShort={0} \u00e8 troppo breve. Il numero minimo di caratteri \u00e8 {1
 currentScript=Fonte originale
 refactoredScript=Fonte Rifattorata
 refactorTitle=Refactor {0}
-reviewChangesMessageRefactoring=Sostituire {0} con {1} potrebbe causare un errore negli script e nelle condizioni.\nFare doppio clic sul nome di uno script per rivedere i cambiamenti. Cliccare su Cancella per cancellare il cambiamento di nome. 
-reviewChangesMessageRemoving={0} è stato cancellato da tutti gli script e tutte le condizioni.\n Fare doppio clic sul nome di uno script per rivedere i cambiamenti. Cliccare su Cancella per cancellare l'operazione.
-askConfirmationForDeleting=Desidera realmente rimuovere i seguenti dati\: {0}
+reviewChangesMessageRefactoring=Sostituire {0} con {1} potrebbe causare un errore negli script e nelle condizioni.\\nFare doppio clic sul nome di uno script per rivedere i cambiamenti. Cliccare su Cancella per cancellare il cambiamento di nome. 
+reviewChangesMessageRemoving=0} \u00e8 stato cancellato da tutti gli script e tutte le condizioni.\\n Fare doppio clic sul nome di uno script per rivedere i cambiamenti. Cliccare su Cancella per cancellare l'operazione.
+deleteFormFieldDialogTitle=Sei sicuro?
+askConfirmationForDeleting=Desidera realmente rimuovere i seguenti dati\\\: {0}
 removingWidgetReferences=Elimiazione delle referenze dei widget...
 removeTitle=Rimuovi {0}
+
