--- a/translations/it/org.bonitasoft.studio.common.repository.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.common.repository.nl_it/messages_it.properties
@@ -18,7 +18,7 @@ invalidArchive=Il file selezionato non \u00e8 un archivio {0} valido
 invalidFileFormat=Formato file non valido
 browseRepository=Sfoglia il repository
 destinationPathMustBeADirectory=Il percorso di destinazione deve essere una directory
-exportFinishMessage=Esportazione completata con successo
+exportFinishMessage=Esporto completato con successo a {0}
 exportLabel=Esporta risultato
 current=Corrente
 readOnlyFileTitle=File di sola lettura
