--- a/translations/it/org.bonitasoft.studio.connectors.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.connectors.nl_it/messages_it.properties
@@ -35,7 +35,7 @@ selectAConnectorDefWarning=Seleziona una definizione connettore per continuare
 connectorOutpuTypeLabel=Output del connettore
 name=Nome
 returnType=Tipo restituito
-remove=Cancella 
+remove=Cancella
 selectConnectorDefinitionTitle=Seleziona una definizione connettore
 selectConnectorDefinitionDesc=Seleziona una definizione connettore dall'elenco qui sotto
 search=Ricerca...
@@ -131,3 +131,4 @@ alwaysUseScriptingModeOutputPref=Utilizzare sempre l'output dello script mode (n
 unsuportedExpressionTypeForTesting=Tipo di espressione non supportata per il test\:
 unresolvedPatternOrScriptExpression=Il parametro di input {0} usa un'espressione contenente un riferimento irraggiungibile
 unresolvedExpression=Il parametro di input {0} utilizza un'espressione non raggiungibile
+deleteConnectorDefinition=Si desidera eliminare il connettore definizione {0}, le implementazioni associate e le configurazioni salvate?
