--- a/translations/it/org.bonitasoft.studio.data.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.data.nl_it/messages_it.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=Nessun elemento o troppi elementi sono stati seleziona
 moveDataWizardTitle=Sposta dati
 moveDataWizardMessage=Sposta il dato su un'attivit\u00e0 o sul processo
 deleteDataDialogTitle=Sei sicuro?
-deleteDialogConfirmMessage=Vuoi davvero cancellare i seguenti dati\:
+deleteDialogConfirmMessage=Desidera realmente rimuovere i seguenti dati\\\: {0}
 moveData=Sposta...
 moveData_tooltip=Spostare i dati in un altro elemento
 dataNameIsEmpty=Il nome \u00e8 vuoto
@@ -82,5 +82,4 @@ documentReferenceType=Referenza documento
 xmlDefaultValueTooLongTitle=Input XML troppo grande
 xmlDefaultValueTooLongMessage=Il file XML scelto \u00e8 troppo grande per essere utilizzato come valore predefinito
 editVariableTitle=Modificare una variabile
-editVariableDescription=Cliccando su OK, se la variabile è usata in uno script Groovy, la finestra di rifactor sarà visualizzata e potrete validare i cambiamenti. 
-deleteDialogConfirmMessage=Desidera realmente rimuovere i seguenti dati\: {0}
+editVariableDescription=Cliccando su OK, se la variabile \u00e8 usata in uno script Groovy, la finestra di rifactor sar\u00e0 visualizzata e potrete validare i cambiamenti. 
