--- a/translations/it/org.bonitasoft.studio.diagram.form.properties.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.diagram.form.properties.nl_it/messages_it.properties
@@ -172,9 +172,10 @@ modifierDescription=Un modificatore pu\u00f2 essere utilizzato per trasformare i
 newDocumentNameHint=Restituisce il nome del nuovo documento
 multipleExplanation=L'espressione ritorna una lista di come di documenti o una lista di URL
 generateFromEnumTooltip=Genera espressioni da un elenco di possibilit\u00e0...
-Action_SelectedValue=Valore selezionato
+Action_SelectedValue=Valore selezionato  
 dateWidgetReturnTypeWarning=Si consiglia di utilizzare una stringa o un tipo di ritorno data
 widgetNameAllreadyExistError={0} esiste gi\u00e0. Si prega di fornire un altro nome del widget.
-widgetEditMessage=Cliccando su OK, se la variabile è usata in uno script Groovy. \nLa finestra di rifactor sarà visualizzata e potrete validare i cambiamenti. 
+widgetEditMessage=Cliccando su OK, se la variabile \u00e8 usata in uno script Groovy. \\nLa finestra di rifactor sar\u00e0 visualizzata e potrete validare i cambiamenti. 
 editWidgetNameTitle=Scegliere un nuovo nome
 removingWidgetReferences=Elimiazione delle referenze dei widget...
+
