--- a/translations/it/org.bonitasoft.studio.properties.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.properties.nl_it/messages_it.properties
@@ -330,4 +330,6 @@ generateFixedDateLabel=Generare l'espressione data fissa
 selectDurationLabel=Selezionare una durata
 generateDurationLabel=Generare l'espressione di durata
 notAValidInput=Valore [{0}] non \u00e8 un input valido
-
+transientDataWarning=Si prega di notare che dati di passaggio nelle operazioni dell'attivit\u00e0 non saranno supportate in versioni future. 
+errorDisplayLabelMaxLength=Visualizzazione del testo troppo lungo. Il numero massimo di caratteri \u00e8 {0}.
+warningDisplayLabelMaxLength=Il numero massimo di caratteri \u00e8 {0} per la visualizzazione dell'etichetta e {1} per descrizioni.
