--- a/translations/it/org.bonitasoft.studio.validation.nl_it/messages_it.properties
+++ b/translations/it/org.bonitasoft.studio.validation.nl_it/messages_it.properties
@@ -62,6 +62,8 @@ unresolvedPatternDependenciesFor=Dipendenza irrisolta\: {0} per modello espressi
 unsupportedReturnTypeForAvailableValuesOf=Tipo restituito non supportato {1} per l'espressione di valori disponibili del widget\: {0}
 incomingTransitionNotSupported=Transizioni in arrivo non supportate per questo elemento
 outgoingTransitionNotSupported=Transizioni in arrivo non supportate per questo elemento
-Validation_StartMessageEventWithCorrelation=La correlazione non è supportata con i messaggi di inizio
-Validation_noConnectorDefFound=La definizione {1} del connettore {0} non esiste più.
+Validation_StartMessageEventWithCorrelation=La correlazione non \u00e8 supportata con i messaggi di inizio
+Validation_noConnectorDefFound=La definizione {1} del connettore {0} non esiste pi\u00f9.
 Validation_noActorFilterDefFound=La definizione {1} del  filtro  {0} non esiste.
+invalidParalellMergeConstraints=Tutte le transazioni in ingresso devono arrivare dallo stesso gateway (esplicito o implicito)
+
