--- a/translations/ja/org.bonitasoft.studio.actors.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.actors.nl_ja/messages_ja.properties
@@ -2,11 +2,11 @@
 userName=\u30e6\u30fc\u30b6\u30fc\u540d
 displayUsersPageTitle=\u7d44\u7e54\u306e\u30e6\u30fc\u30b6\u30fc
 displayUsersPageDesc=\u73fe\u5728\u306e\u7d44\u7e54\u306e\u3059\u3079\u3066\u306e\u30e6\u30fc\u30b6\u30fc
-firstName=\u59d3\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1afirst name\uff09
-lastName=\u540d\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1alast name\uff09
+firstName=\u59d3\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1aFirst name\uff09
+lastName=\u540d\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1aLast name\uff09
 userInfo=\u30e6\u30fc\u30b6\u30fc\u60c5\u5831
 delete=\u524a\u9664
-userTitle=\u30bf\u30a4\u30c8\u30eb
+userTitle=\u30bf\u30a4\u30c8\u30eb\uff08\u6027\u5225\uff09
 titleHint=Mr, Ms...
 userNameHint=\u5c71\u7530.\u592a\u90ce
 firstNameHint=\u5c71\u7530
@@ -36,7 +36,7 @@ zipCodeLabel=\u3012
 zipCodeHint=105-0003
 cityLabel=\u5e02\u533a\u753a\u6751
 cityHint=\u6e2f\u533a
-stateLabel=\u90fd\u9053\u5e9c\u770c
+stateLabel=\u72b6\u614b
 stateHint=\u6771\u4eac\u90fd
 countryLabel=\u56fd
 coutryHint=\u65e5\u672c
@@ -45,9 +45,9 @@ websiteHint=http\://www.bonitasoft.com
 addMetadata=\u30e1\u30bf\u30c7\u30fc\u30bf\u3092\u8ffd\u52a0...
 metadataName=\u30e1\u30bf\u30c7\u30fc\u30bf\u540d
 deleteMetadataTitle=\u30e1\u30bf\u30c7\u30fc\u30bf\u3092\u524a\u9664\u3057\u307e\u3059\u304b\uff1f
-deleteMetadataMsg=\u3042\u306a\u305f\u306f\u3001\u3059\u3079\u3066\u306e\u30e6\u30fc\u30b6\u30fc \u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u304b\u3089\u3053\u306e\u30e1\u30bf\u30c7\u30fc\u30bf\u3092\u524a\u9664\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002\u524a\u9664\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
+deleteMetadataMsg=\u3042\u306a\u305f\u306f\u3001\u3059\u3079\u3066\u306e\u30e6\u30fc\u30b6\u30fc\u30d7\u30ed\u30d5\u30a1\u30a4\u30eb\u304b\u3089\u3053\u306e\u30e1\u30bf\u30c7\u30fc\u30bf\u3092\u524a\u9664\u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002\u524a\u9664\u3066\u3082\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
 metadataAlreadyExists=\u30e1\u30bf\u30c7\u30fc\u30bf\u540d {0} \u306f\u65e2\u306b\u5b58\u5728\u3057\u307e\u3059\!
-defaultUserName=\u30e6\u30fc\u30b6\u30fc
+defaultUserName=\u5229\u7528\u8005
 add=\u8ffd\u52a0
 remove=\u524a\u9664
 organizations=\u7d44\u7e54
@@ -94,7 +94,7 @@ nameAlreadyExists=\u3042\u306a\u305f\u306e\u30d7\u30ed\u30bb\u30b9\u306b\u306f\u
 nameIsEmpty=\u540d\u524d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 selectOrganization=\u7d44\u7e54\u3092\u9078\u629e
 edit=\u7de8\u96c6...
-useActorsDefinedInLane=\u30ec\u30fc\u30f3\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u30a2\u30af\u30bf\u30fc\u3092\u4f7f\u7528
+useActorsDefinedInLane=\u30ec\u30fc\u30f3\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u62c5\u5f53\u8005\u3092\u4f7f\u7528
 useTaskActors=\u4ee5\u4e0b\u306e\u30a2\u30af\u30bf\u30fc\u3092\u4f7f\u7528
 actorMapping=\u30a2\u30af\u30bf\u30fc\u30de\u30c3\u30d4\u30f3\u30b0
 addGroup=\u30b0\u30eb\u30fc\u30d7...
@@ -155,16 +155,16 @@ defaultUserOrganizationTitle=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u30e6\u30fc\u3
 defaultUserOrganizationDesc=\u30dd\u30fc\u30bf\u30eb\u3078\u306e\u30ed\u30b0\u30a4\u30f3\u306b\u4f7f\u7528\u3059\u308b\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u9078\u629e
 actorHasNoMapping=\u30a2\u30af\u30bf\u30fc\: {0} \u306f\u3001\u4efb\u610f\u306e\u30b0\u30eb\u30fc\u30d7\u3001\u5f79\u5272\u3001\u6240\u5c5e\u307e\u305f\u306f\u30e6\u30fc\u30b6\u30fc\u306b\u30de\u30c3\u30d4\u30f3\u30b0\u3055\u308c\u3066\u3044\u307e\u305b\u3093
 incompleteMembership=\u6240\u5c5e\u304c\u4e0d\u5b8c\u5168\u3067\u3059
-addRemoveActors=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30bf\u30b9\u30af\u306e\u30d7\u30ed\u30bb\u30b9\u3092\u5b9f\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u30d7\u30ed\u30bb\u30b9\u5185\u306e\u5f79\u5272\u3054\u3068\u306b\u30a2\u30af\u30bf\u30fc\u3092\u8ffd\u52a0\u3057\u3001\u8d77\u6848\u8005\u3068\u3057\u30661 \u3064\u8a2d\u5b9a\u3057\u307e\u3059\u3002\u30d7\u30ed\u30bb\u30b9\u3092\u5b9f\u884c\u3067\u304d\u308b\u3088\u3046\u306b\u3059\u308b\u524d\u306b\u3001\u30b9\u30bf\u30b8\u30aa\u3084\u30dd\u30fc\u30bf\u30eb\u3067\u30a2\u30af\u30bf\u30fc\u306b\u5229\u7528\u8005\u3092\u5272\u308a\u5f53\u3066\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
-actorDescriptionLane=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30d7\u30ed\u30bb\u30b9\u3067\u30bf\u30b9\u30af\u3092\u5b9f\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u30ec\u30fc\u30f3\u306b\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u30a2\u30af\u30bf\u30fc\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u3053\u306e\u30a2\u30af\u30bf\u30fc\u306f\u30d7\u30fc\u30eb\u30fb\u30ec\u30d9\u30eb\u3067\u65e2\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002\u30a2\u30af\u30bf\u30fc\u3092\u3088\u308a\u6b63\u78ba\u306b\u5b9a\u7fa9\u3059\u308b\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u3092\u9069\u7528\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002
-actorDescriptionTask=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30d7\u30ed\u30bb\u30b9\u306e\u30bf\u30b9\u30af\u3092\u5b9f\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u3053\u306e\u30bf\u30b9\u30af\u306f\u3001\u30ec\u30fc\u30f3\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u30a2\u30af\u30bf\u30fc\u306b\u3088\u308b\u304b\u3001\u307e\u305f\u306f\u76f4\u63a5\u30bf\u30b9\u30af\u306b\u6307\u5b9a\u3057\u305f\u30a2\u30af\u30bf\u30fc\u306b\u3088\u308b\u304b\u3001\u3044\u305a\u308c\u306e\u30a2\u30af\u30bf\u30fc\u304c\u5b9f\u884c\u3059\u308b\u304b\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u3053\u308c\u3089\u306e\u30a2\u30af\u30bf\u30fc\u306f\u30d7\u30fc\u30eb\u30fb\u30ec\u30d9\u30eb\u3067\u65e2\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002\u30a2\u30af\u30bf\u30fc\u3092\u3088\u308a\u6b63\u78ba\u306b\u5b9a\u7fa9\u3059\u308b\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u3092\u9069\u7528\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002
+addRemoveActors=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30bf\u30b9\u30af\u306e\u30d7\u30ed\u30bb\u30b9\u3092\u9042\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u30d7\u30ed\u30bb\u30b9\u5185\u306e\u5f79\u5272\u3054\u3068\u306b\u30a2\u30af\u30bf\u30fc\u3092\u8ffd\u52a0\u3057\u3001\u8d77\u6848\u8005\u3068\u3057\u30661 \u3064\u8a2d\u5b9a\u3057\u307e\u3059\u3002\u30d7\u30ed\u30bb\u30b9\u3092\u5b9f\u884c\u3067\u304d\u308b\u3088\u3046\u306b\u3059\u308b\u524d\u306b\u3001\u30b9\u30bf\u30b8\u30aa\u3084\u30dd\u30fc\u30bf\u30eb\u3067\u30a2\u30af\u30bf\u30fc\u306b\u5229\u7528\u8005\u3092\u5272\u308a\u5f53\u3066\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+actorDescriptionLane=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30d7\u30ed\u30bb\u30b9\u3067\u30bf\u30b9\u30af\u3092\u9042\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u30ec\u30fc\u30f3\u306b\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u30a2\u30af\u30bf\u30fc\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u3053\u306e\u30a2\u30af\u30bf\u30fc\u306f\u30d7\u30fc\u30eb\u30fb\u30ec\u30d9\u30eb\u3067\u65e2\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002\u30a2\u30af\u30bf\u30fc\u3092\u3088\u308a\u6b63\u78ba\u306b\u5b9a\u7fa9\u3059\u308b\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u3092\u9069\u7528\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002
+actorDescriptionTask=\u30a2\u30af\u30bf\u30fc\u306f\u3001\u30d7\u30ed\u30bb\u30b9\u306e\u30bf\u30b9\u30af\u3092\u9042\u884c\u3059\u308b\u5229\u7528\u8005\u306e\u30d7\u30ec\u30fc\u30b9\u30db\u30eb\u30c0\u30fc\u3067\u3059\u3002\u3053\u306e\u30bf\u30b9\u30af\u306f\u3001\u30ec\u30fc\u30f3\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u30a2\u30af\u30bf\u30fc\u306b\u3088\u308b\u304b\u3001\u307e\u305f\u306f\u76f4\u63a5\u30bf\u30b9\u30af\u306b\u6307\u5b9a\u3057\u305f\u30a2\u30af\u30bf\u30fc\u306b\u3088\u308b\u304b\u3001\u3044\u305a\u308c\u306e\u30a2\u30af\u30bf\u30fc\u304c\u5b9f\u884c\u3059\u308b\u304b\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002\u3053\u308c\u3089\u306e\u30a2\u30af\u30bf\u30fc\u306f\u30d7\u30fc\u30eb\u30fb\u30ec\u30d9\u30eb\u3067\u65e2\u306b\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002\u30a2\u30af\u30bf\u30fc\u3092\u3088\u308a\u6b63\u78ba\u306b\u5b9a\u7fa9\u3059\u308b\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u3092\u9069\u7528\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002
 missingGroup=\u30e6\u30fc\u30b6\u30fc {0} \u306e\u30e1\u30f3\u30d0\u30fc\u30b7\u30c3\u30d7\u306b\u30b0\u30eb\u30fc\u30d7\u304c\u3042\u308a\u307e\u305b\u3093
 missingGroupInMembership=\u30b0\u30eb\u30fc\u30d7 '{0}' \u3092\u53c2\u7167\u3059\u308b {1} \u306e\u6240\u5c5e \u304c\u5b58\u5728\u3057\u307e\u305b\u3093
 missingRoleInMembership=\u5f79\u5272 '{0}' \u3092\u53c2\u7167\u3059\u308b {1} \u306e\u6240\u5c5e\u304c\u5b58\u5728\u3057\u307e\u305b\u3093
 missingRole=\u30e6\u30fc\u30b6\u30fc {0} \u306e\u30e1\u30f3\u30d0\u30fc\u30b7\u30c3\u30d7\u306b\u5f79\u5272\u304c\u3042\u308a\u307e\u305b\u3093
 organizationValidationFailed=\u7d44\u7e54\u306e\u691c\u8a3c\u306b\u5931\u6557\u3057\u307e\u3057\u305f
 actorFilters=\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf
-actorFiltersConfigurationDescription=\u3053\u306e\u30d7\u30ed\u30bb\u30b9\u3067\u4f7f\u7528\u3055\u308c\u3066\u3044\u308b\u5404\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u5b9a\u7fa9\u306e\u5b9f\u88c5\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
+actorFiltersConfigurationDescription=\u3053\u306e\u30d7\u30ed\u30bb\u30b9\u3067\u4f7f\u7528\u3055\u308c\u3066\u3044\u308b\u5404\u62c5\u5f53\u8005\u30d5\u30a3\u30eb\u30bf\u5b9a\u7fa9\u306e\u5b9f\u88c5\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
 invalidImplementationFor=\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u5b9a\u7fa9 {0} \u306e\u7121\u52b9\u306a\u5b9f\u88c5
 implementationNotFound=\u5b9f\u88c5 {0} \u304c\u30ea\u30dd\u30b8\u30c8\u30ea\u306b\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
 importActorMappingFile=\u30a2\u30af\u30bf\u30fc\u30de\u30c3\u30d4\u30f3\u30b0\u30fb\u30d5\u30a1\u30a4\u30eb\u3092\u30a4\u30f3\u30dd\u30fc\u30c8...
@@ -195,15 +195,16 @@ importOrganizationSuccessfullTitle=\u6b63\u5e38\u306b\u30a4\u30f3\u30dd\u30fc\u3
 importOrganizationSuccessfullMessage=\u7d44\u7e54\u306f\u6b63\u5e38\u306b\u30a4\u30f3\u30dd\u30fc\u30c8\u3055\u308c\u307e\u3057\u305f\u3002
 errorSelectionGroups=\u30b0\u30eb\u30fc\u30d7\u3068\u305d\u306e\u95a2\u9023\u4f1a\u793e\u3092\u9078\u629e\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002
 exportActorFilterTitle=\u30a2\u30af\u30bf\u30fc\u30d5\u30a3\u30eb\u30bf\u3092\u30a8\u30af\u30b9\u30dd\u30fc\u30c8
+addActor=\u8ffd\u52a0...
+initiator=\u8d77\u6848\u8005
+newActor=\u65b0\u898f\u30a2\u30af\u30bf\u30fc
+actorWizardPageTitle=\u65b0\u898f\u30a2\u30af\u30bf\u30fc\u3092\u8ffd\u52a0
 organizationHasBeenModifiedTitle=\u8b66\u544a\: \u7d44\u7e54\u304c\u5909\u66f4\u3055\u308c\u3066\u3044\u307e\u3059
 organizationHasBeenModifiedMessage={0} \u306f\u5909\u66f4\u3055\u308c\u3066\u3044\u307e\u3059\u3002\u518d\u767a\u884c\u3059\u308b\u3053\u3068\u3092\u304a\u52e7\u3081\u3057\u307e\u3059\u3002\u4eca\u518d\u767a\u884c\u3092\u3057\u307e\u3059\u304b\uff1f
 doNotDisplayAgain=\u518d\u5ea6\u8868\u793a\u3055\u308c\u307e\u305b\u3093\u3002
 userDoesntExistAnymoreTitle=\u7d44\u7e54\u304c\u767a\u884c\u3055\u308c\u3066\u3044\u307e\u305b\u3093
 userDoesntExistAnymore=\u7d44\u7e54\u304c\u767a\u884c\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3002\u30c7\u30d5\u30a9\u30eb\u30c8\u30fb\u30e6\u30fc\u30b6\u30fc {0} \u304c\u3082\u3046\u5b58\u5728\u3057\u3066\u3044\u307e\u305b\u3093\u3002\u300c\u7d44\u7e54/\u767a\u884c...\u300d\u30e1\u30cb\u30e5\u30fc\u3067\u5225\u306e\u30c7\u30d5\u30a9\u30eb\u30c8\u30fb\u30e6\u30fc\u30b6\u30fc\u3092\u69cb\u6210\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-addActor=\u8ffd\u52a0...
-initiator=\u8d77\u6848\u8005
-newActor=\u65b0\u898f\u30a2\u30af\u30bf\u30fc
-actorWizardPageTitle=\u65b0\u898f\u30a2\u30af\u30bf\u30fc\u3092\u8ffd\u52a0
 UserDoesntExistError=\u30e6\u30fc\u30b6\u30fc {0} \u306f\u3001\u73fe\u5728\u306e\u7d44\u7e54\u306b\u5b58\u5728\u3057\u307e\u305b\u3093\u3002\u5225\u306e\u30e6\u30fc\u30b6\u30fc\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-
+updateActorReferences=\u30a2\u30af\u30bf\u30fc\u53c2\u7167\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
+refactoringActorMappings=\u30a2\u30af\u30bf\u30fc\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u3092\u30ea\u30d5\u30a1\u30af\u30bf\u30ea\u30f3\u30b0\u3057\u3066\u3044\u307e\u3059...
 
