--- a/translations/ja/org.bonitasoft.studio.diagram.form.properties.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.diagram.form.properties.nl_ja/messages_ja.properties
@@ -54,11 +54,11 @@ isMandatory=\u5fc5\u9808
 isMandatory_tooltip=\u30d5\u30a3\u30fc\u30eb\u30c9\u304c\u5fc5\u9808\u306e\u5834\u5408\u306b\u30c1\u30a7\u30c3\u30af\u3057\u307e\u3059
 Widget_DisplayDateFormat=\u8868\u793a\u5f62\u5f0f
 Widget_DisplayDateFormat_tooltip=G\t\u7d00\u5143\ny\t\u5e74\nM\t\u6708\nw\t\u5e74\u306e\u7b2cw\u9031\nW\t\u6708\u306e\u7b2cW\u9031\nD\t\u5e74\u306eD\u65e5\u76ee\uff08\u901a\u65e5\uff09\nd\t\u65e5\nF\t\u6708\u306e\u7b2cF\u66dc\u65e5\nE\t\u66dc\u65e5\na\t\u5348\u524d/\u5348\u5f8c\nH\t\u4e00\u65e5\u306b\u304a\u3051\u308b\u6642(0\uff5e23)\nk\t\u4e00\u65e5\u306b\u304a\u3051\u308b\u6642(1\uff5e24)\nK\t\u5348\u524d/\u5348\u5f8c\u306e\u6642(0\uff5e11)\nh\t\u5348\u524d/\u5348\u5f8c\u306e\u6642(1\uff5e12)\nm\t\u5206\ns\t\u79d2\nS\t\u30df\u30ea\u79d2\nz\t\u30bf\u30a4\u30e0\u30be\u30fc\u30f3\nZ\t\u30bf\u30a4\u30e0\u30be\u30fc\u30f3
-Widget_Date_Format1=2009\u5e7412\u670825\u65e5
-Widget_Date_Format2=2009-12-25
-Widget_Date_Format3=2009/12/25
-Widget_Date_Format4=09/12/25 12\:50
-Widget_Date_Format5=12\u670825\u65e5\u91d1\u66dc\u65e5 \u5348\u524d 8\:50
+Widget_Date_Format1=yyyy\u5e74MM\u6708dd\u65e5
+Widget_Date_Format2=yyyy-MM-dd
+Widget_Date_Format3=yyyy/MM/dd
+Widget_Date_Format4=yy/MM/dd HH\:mm
+Widget_Date_Format5=MM\u6708dd\u65e5 hh\:mm a
 GridSize=\u30b0\u30ea\u30c3\u30c9\u306e\u30b5\u30a4\u30ba \uff08\u30d4\u30af\u30bb\u30eb\u5358\u4f4d\u307e\u305f\u306f '%'\uff09
 Vertical=\u5782\u76f4\u65b9\u5411
 Horizontal=\u6c34\u5e73\u65b9\u5411
@@ -175,3 +175,7 @@ generateFromEnumTooltip=\u30aa\u30d7\u30b7\u30e7\u30f3\u30ea\u30b9\u30c8\u304b\u
 Action_SelectedValue=\u9078\u629e\u3057\u305f\u5024
 dateWidgetReturnTypeWarning=\u623b\u308a\u5024\u306b\u6587\u5b57\u5217\u3001\u307e\u305f\u306f\u65e5\u4ed8\u306e\u30c7\u30fc\u30bf\u578b\u3092\u4f7f\u7528\u3059\u308b\u3053\u3068\u3092\u304a\u52e7\u3081\u3057\u307e\u3059
 widgetNameAllreadyExistError={0} \u306f\u65e2\u306b\u5b58\u5728\u3057\u307e\u3059\u3002\u5225\u306e\u30a6\u30a3\u30b8\u30a7\u30c3\u30c8\u540d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+widgetEditMessage=\u73fe\u5728\u306e\u540d\u524d\u304cGroovy \u30b9\u30af\u30ea\u30d7\u30c8\u3067\u4f7f\u7528\u3055\u308c\u3066\u3044\u308b\u5834\u5408\u3001 [OK] \u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u3001\u300c\u30ea\u30d5\u30a1\u30af\u30bf\u30ea\u30f3\u30b0\u300d\u30a6\u30a3\u30f3\u30c9\u30a6\u304c\u8868\u793a\u3055\u308c\u3001\u5909\u66f4\u3092\u691c\u8a3c\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
+editWidgetNameTitle=\u65b0\u3057\u3044\u540d\u524d\u3092\u9078\u629e
+removingWidgetReferences=\u30a6\u30a3\u30b8\u30a7\u30c3\u30c8\u306e\u53c2\u7167\u3092\u524a\u9664\u3057\u3066\u3044\u307e\u3059...
+
