--- a/translations/ja/org.bonitasoft.studio.registration.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.registration.nl_ja/messages_ja.properties
@@ -3,8 +3,8 @@ RegisterWizardPage_Title=\u767b\u9332
 RegisterWizardPage_Desc=\u6700\u65b0\u30cb\u30e5\u30fc\u30b9\u3092\u57fa\u306b{0}\u3092\u6700\u65b0\u72b6\u614b\u306b\u4fdd\u3061\u305f\u3044\u5834\u5408\u306f\u3001\u3042\u306a\u305f\u306e\u30e1\u30fc\u30eb \u30a2\u30c9\u30ec\u30b9\u3068\u56fd\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 RegisterWizardPage_email=\u4ed5\u4e8b\u4e0a\u306e\u96fb\u5b50\u30e1\u30fc\u30eb
 RegisterWizardPage_country=\u56fd
-RegisterWizardPage_firstName=\u59d3\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1afirst name\uff09
-RegisterWizardPage_lastName=\u540d\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1alast name\uff09
+RegisterWizardPage_firstName=\u59d3\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1aFirst name\uff09
+RegisterWizardPage_lastName=\u540d\uff08\u82f1\u8a9e\u306e\u5834\u5408\uff1aLast name\uff09
 RegisterWizardPage_phone=\u96fb\u8a71\u756a\u53f7
 RegisterWizardPage_mandatory=* \u5fc5\u9808\u30d5\u30a3\u30fc\u30eb\u30c9
 
