--- a/translations/pt/org.bonitasoft.studio.common.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.common.nl_pt/messages_pt.properties
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=Nome ou vers\u00e3o do diagrama deve ser alter
 bonitaName=Bonita
 bosProductName=Bonita BPM
 bosSPProductName=Subscri\u00e7\u00e3o de Bonita BPM
-bonitaStudioModuleName=Bonita Studio
+bonitaStudioModuleName=Bonita BPM Studio
 bonitaPortalModuleName=Bonita BPM Portal
-bonitaEngineModuleName=Bonita Engine
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=BonitaSoft
 bonitaBPMCommunity=Comunidade Bonita BPM
 bonitaBPMTeamworkSubscription=Subscri\u00e7\u00e3o Bonita BPM Teamwork
@@ -290,8 +290,10 @@ fieldIsTooShort={0} \u00e9 muito curto. O n\u00famero m\u00ednimo de caracteres 
 currentScript=Script original
 refactoredScript=Script atualizado
 refactorTitle=Refactor {0}
-reviewChangesMessageRefactoring=Substituir {0} por {1} pode causar pequenos erros em scripts e condições.\n Clique duas vezes em um nome de script para revisar e editar mudanças. Clique em Cancelar para cancelar a mudança de nome.
-reviewChangesMessageRemoving={0} foi removido de todos os scripts e condições. \n Dê um duplo clique em um nome de script para revisar e editar mudanças. Clique em Cancelar para cancelar a operação de remoção.
-askConfirmationForDeleting=Realmente deseja remover os seguintes dados \: {0}
-removingWidgetReferences=Removendo referências de widgets ...
+reviewChangesMessageRefactoring=Substituir {0} por {1} pode causar pequenos erros em scripts e condi\u00e7\u00f5es.\\n Clique duas vezes em um nome de script para revisar e editar mudan\u00e7as. Clique em Cancelar para cancelar a mudan\u00e7a de nome.
+reviewChangesMessageRemoving={0} foi removido de todos os scripts e condi\u00e7\u00f5es. \\n D\u00ea um duplo clique em um nome de script para revisar e editar mudan\u00e7as. Clique em Cancelar para cancelar a opera\u00e7\u00e3o de remo\u00e7\u00e3o.
+deleteFormFieldDialogTitle=Tem certeza?
+askConfirmationForDeleting=Realmente deseja remover os seguintes dados \\\: {0}
+removingWidgetReferences=Removendo refer\u00eancias de widgets ...
 removeTitle=Remover {0}
+
