--- a/translations/pt/org.bonitasoft.studio.common.repository.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.common.repository.nl_pt/messages_pt.properties
@@ -18,7 +18,7 @@ invalidArchive=O arquivo selecionado n\u00e3o \u00e9 um arquivo v\u00e1lido\: {0
 invalidFileFormat=Formato de arquivo inv\u00e1lido
 browseRepository=Pesquisar reposit\u00f3rios
 destinationPathMustBeADirectory=Caminho de destino deve ser um diret\u00f3rio
-exportFinishMessage=Exporta\u00e7\u00e3o conclu\u00edda com \u00eaxito
+exportFinishMessage=A exporta\u00e7\u00e3o foi conclu\u00edda com sucesso para {0}
 exportLabel=Resultado de exporta\u00e7\u00e3o
 current=Atual
 readOnlyFileTitle=Arquivo somente leitura
