--- a/translations/pt/org.bonitasoft.studio.connectors.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.connectors.nl_pt/messages_pt.properties
@@ -35,7 +35,7 @@ selectAConnectorDefWarning=Selecione uma defini\u00e7\u00e3o de conector para co
 connectorOutpuTypeLabel=Sa\u00edda do conector
 name=Nome
 returnType=Tipo de retorno
-remove=Remover
+remove=Excluir
 selectConnectorDefinitionTitle=Selecione uma defini\u00e7\u00e3o de conector
 selectConnectorDefinitionDesc=Selecione na lista abaixo uma defini\u00e7\u00e3o de conector
 search=Pesquisar...
@@ -130,4 +130,5 @@ nRowsNColsOutputHint=Nota\: O tipo de retorno esperado \u00e9 uma "lista de list
 alwaysUseScriptingModeOutputPref=Sempre usar o modo script para a sa\u00edda (ocultar sele\u00e7\u00e3o do modo de sa\u00edda durante a configura\u00e7\u00e3o)
 unsuportedExpressionTypeForTesting=Tipo de express\u00e3o n\u00e3o suportada para teste\:
 unresolvedPatternOrScriptExpression=O par\u00e2metro de entrada {0} usa uma express\u00e3o contendo uma refer\u00eancia inacess\u00edvel
-unresolvedExpression=Par\u00e2metro de entrada {0} usa uma express\u00e3o inacess\u00edvel
+unresolvedExpression=O par\u00e2metro de entrada {0} usa uma express\u00e3o inacess\u00edvel
+deleteConnectorDefinition=Deseja excluir o a defini\u00e7\u00e3o de conector{0} assim que as implementa\u00e7\u00f5es e as configura\u00e7\u00f5es a ela associadas?
