--- a/translations/pt/org.bonitasoft.studio.diagram.form.properties.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.diagram.form.properties.nl_pt/messages_pt.properties
@@ -172,9 +172,10 @@ modifierDescription=Um modificador pode ser usado para transformar o tipo de sa\
 newDocumentNameHint=Retorna o nome do novo documento
 multipleExplanation=Express\u00e3o retornando uma lista de nomes de documento ou uma lista de urls
 generateFromEnumTooltip=Gera express\u00e3o de uma lista de op\u00e7\u00e3o...
-Action_SelectedValue=Valor selecionado
+Action_SelectedValue=Valor selecionado  
 dateWidgetReturnTypeWarning=Recomenda-se usar String ou Date como tipo de retorno
 widgetNameAllreadyExistError={0} j\u00e1 existe. Por favor, forne\u00e7a um outro nome para o widget.
-widgetEditMessage=Ao clicar em OK, se o nome atual é usado em scripts Groovy a janela de refatoração \nserá exibida e você poderá validar as alterações.
+widgetEditMessage=Ao clicar em OK, se o nome atual \u00e9 usado em scripts Groovy a janela de refatora\u00e7\u00e3o \\nser\u00e1 exibida e voc\u00ea poder\u00e1 validar as altera\u00e7\u00f5es.
 editWidgetNameTitle=Escolha um novo nome
-removingWidgetReferences=Excluindo referências de widget...
+removingWidgetReferences=Removendo refer\u00eancias de widgets ...
+
