--- a/translations/pt/org.bonitasoft.studio.engine.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.engine.nl_pt/messages_pt.properties
@@ -60,5 +60,5 @@ noBrowserFoundMsg=O Portal n\u00e3o pode ser lan\u00e7ado porque nenhum navegado
 cannotStartTomcatTitle=Tomcat n\u00e3o pode ser iniciado
 cannotStartTomcatMessage=Tomcat n\u00e3o pode ser iniciado\: a porta pode estar sendo usada por outro aplicativo. Poss\u00edveis causas s\u00e3o que outro Studio ou outro Tomcat j\u00e1 est\u00e1 em execu\u00e7\u00e3o.
 noInitiatorDefinedTitle=Nenhum iniciador definido
-noInitiatorDefinedMessage=Nenhum iniciador do processo definido para {0}. Voc\u00ea vai ser redirecionado ao Bonita BPM Portal.
+noInitiatorDefinedMessage=Nenhum iniciador do processo definido para {0}. Voc\u00ea vai ser redirecionado ao Bonita Portal.
 dontaskagain=n\u00e3o mostrar pr\u00f3xima vez.
