--- a/translations/pt/org.bonitasoft.studio.properties.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.properties.nl_pt/messages_pt.properties
@@ -330,4 +330,6 @@ generateFixedDateLabel=Gerar a express\u00e3o de data fixa
 selectDurationLabel=Selecione uma dura\u00e7\u00e3o
 generateDurationLabel=Gerar uma express\u00e3o de dura\u00e7\u00e3o
 notAValidInput=Valor [{0}] n\u00e3o \u00e9 uma entrada v\u00e1lida
-
+transientDataWarning=Por favor, note que dados transit\u00f3rios em opera\u00e7\u00f5es de atividades n\u00e3o ser\u00e3o suportados em vers\u00f5es futuras. 
+errorDisplayLabelMaxLength=O texto da etiqueta \u00e9 muito longo. O n\u00famero m\u00e1ximo de caracteres \u00e9 {0}.
+warningDisplayLabelMaxLength=O n\u00famero m\u00e1ximo de caracteres \u00e9 {0} para a etiqueta e {1} para descri\u00e7\u00f5es.
