--- a/translations/pt/org.bonitasoft.studio.validation.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.validation.nl_pt/messages_pt.properties
@@ -61,8 +61,9 @@ unresolvedDependenciesFor=Depend\u00eancia n\u00e3o resolvida para express\u00e3
 unresolvedPatternDependenciesFor=Depend\u00eancia n\u00e3o resolvida {0} para o padr\u00e3o de express\u00e3o {1}
 unsupportedReturnTypeForAvailableValuesOf=Tipo de retorno n\u00e3o suportado {1} para express\u00e3o de valores dispon\u00edveis do widget {0}
 incomingTransitionNotSupported=Mudan\u00e7a(s) de entrada n\u00e3o suportada(s) para este elemento
-outgoingTransitionNotSupported=Mudan\u00e7a(s) de entrada n\u00e3o suportada(s) para este elemento
-Validation_StartMessageEventWithCorrelation=Não é possível utilizar correlação em um evento de mensagem de início
-Validation_noConnectorDefFound=A definição {1} do conector {0} não existe mais.
-Validation_noActorFilterDefFound=A definição {1} do filtro de ator {0} não existe mais.
-invalidParalellMergeConstraints=Todas as transições entrantes devem vir do mesmo desvio (gateway) (explícito ou implícito)
+outgoingTransitionNotSupported=Transi\u00e7\u00f5es(s) de entrada n\u00e3o suportada(s) para este elemento
+Validation_StartMessageEventWithCorrelation=N\u00e3o \u00e9 poss\u00edvel utilizar correla\u00e7\u00e3o em um evento de mensagem de in\u00edcio
+Validation_noConnectorDefFound=A defini\u00e7\u00e3o {1} do conector {0} n\u00e3o existe mais.
+Validation_noActorFilterDefFound=A defini\u00e7\u00e3o {1} do filtro de ator {0} n\u00e3o existe mais.
+invalidParalellMergeConstraints=Todas as transi\u00e7\u00f5es entrantes devem vir do mesmo desvio (gateway) (expl\u00edcito ou impl\u00edcito)
+
