--- a/translations/fr/org.bonitasoft.studio.actors.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.actors.nl_fr/messages_fr.properties
@@ -195,15 +195,16 @@ importOrganizationSuccessfullTitle=Import r\u00e9ussie
 importOrganizationSuccessfullMessage=Organisation a \u00e9t\u00e9 import\u00e9e avec succ\u00e8s.
 errorSelectionGroups=Vous ne pouvez pas s\u00e9lectionner un groupe et un de ses affili\u00e9s.
 exportActorFilterTitle=Exporter le filtre d'acteur
+addActor=Ajouter...
+initiator=Initiateur
+newActor=Cr\u00e9ation d'acteur
+actorWizardPageTitle=Ajouter un acteur
 organizationHasBeenModifiedTitle=Attention \: l'organisation a \u00e9t\u00e9 modifi\u00e9
 organizationHasBeenModifiedMessage={0} a \u00e9t\u00e9 modifi\u00e9. Il est recommand\u00e9 de la republier. Voulez-vous le faire maintenant ?
 doNotDisplayAgain=Ne plus afficher.
 userDoesntExistAnymoreTitle=L'organisation n'a pas \u00e9t\u00e9 publi\u00e9
 userDoesntExistAnymore=L'organisation n'a pas \u00e9t\u00e9 publi\u00e9. L'utilisateur par d\u00e9faut {0} n'existe pas. Veuillez configurer un autre utilisateur par d\u00e9faut dans le menu "Organisation/Publier...".
-addActor=Ajouter...
-initiator=Initiateur
-newActor=Cr\u00e9ation d'acteur
-actorWizardPageTitle=Ajouter un acteur
 UserDoesntExistError=L'utilisateur {0} n'existe pas dans l'organisation actuelle. Veuillez utiliser un autre utilisateur.
-updateActorReferences=Mise à jour des références...
-refactoringActorMappings=Mise à jour de l'actor mapping
+updateActorReferences=Mise \u00e0 jour des r\u00e9f\u00e9rences...
+refactoringActorMappings=Mise \u00e0 jour de l'actor mapping...
+
