--- a/translations/fr/org.bonitasoft.studio.common.repository.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.common.repository.nl_fr/messages_fr.properties
@@ -18,7 +18,7 @@ invalidArchive=Le fichier s\u00e9lectionn\u00e9 n'est pas une archive {0} valide
 invalidFileFormat=Format de fichier non valide
 browseRepository=Parcourir les repositories
 destinationPathMustBeADirectory=Le chemin de destination doit \u00eatre un r\u00e9pertoire
-exportFinishMessage=L'export s'est termin\u00e9 correctement
+exportFinishMessage=Export termin\u00e9 avec succ\u00e8s {0}
 exportLabel=Exporter le r\u00e9sultat
 current=Courant
 readOnlyFileTitle=Fichier en lecture seule
