--- a/translations/fr/org.bonitasoft.studio.diagram.form.properties.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.diagram.form.properties.nl_fr/messages_fr.properties
@@ -172,9 +172,10 @@ modifierDescription=Un modificateur peut \u00eatre utilis\u00e9 pour transformer
 newDocumentNameHint=Retourne le nom du nouveau document
 multipleExplanation=Expression qui retourne une liste des noms de documents ou une liste d'URL
 generateFromEnumTooltip=G\u00e9n\u00e9rer l'expression depuis une liste d'option...
-Action_SelectedValue=Valeur s\u00e9lectionn\u00e9e
+Action_SelectedValue=Valeur s\u00e9lectionn\u00e9e  
 dateWidgetReturnTypeWarning=Il est recommand\u00e9 d'utiliser les types de retour "Date" ou "String"
 widgetNameAllreadyExistError={0} existe d\u00e9j\u00e0. Veuillez entrer un autre nom de widget.
-widgetEditMessage=Lorsque vous cliquez sur OK, si le nom actuel est utilisé dans un script Groovy, la fenêtre de refactor s'affiche et vous pouvez valider les modifications.
+widgetEditMessage=Lorsque vous cliquez sur OK, si le nom actuel est utilis\u00e9 dans un script Groovy, la fen\u00eatre de refactor s'affiche et vous pouvez valider les modifications.
 editWidgetNameTitle=Choisissez un nouveau nom
-removingWidgetReferences=Suppression des références de widget...
+removingWidgetReferences=Suppression des r\u00e9f\u00e9rences de widget...
+
