--- a/translations/fr/org.bonitasoft.studio.form.preview.nl_fr/messages_fr.properties
+++ b/translations/fr/org.bonitasoft.studio.form.preview.nl_fr/messages_fr.properties
@@ -3,7 +3,7 @@ previewButton=Aper\u00e7u
 advancedPreviewButton=Aper\u00e7u avanc\u00e9...
 lnfForPreview=Look and Feel\:
 browserForPreview=Navigateur\:
-formPreview=Pr\u00e9visualisation du formulaire actuel...
+formPreview=Aper\u00e7u du formulaire actuel...
 noActorDefined=Le formulaire ne peut pas \u00eatre pr\u00e9visualis\u00e9. Aucun acteur n'est d\u00e9fini \u00e0 l'\u00e9tape {0}.
 noActorMappingDefined=L'aper\u00e7u de ce formulaire n'est pas disponible. Les acteurs n'ont pas \u00e9t\u00e9 associ\u00e9s.
 noActorDefinedTitle=Aucun acteur d\u00e9fini
