--- a/translations/ja/org.bonitasoft.studio.common.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.common.nl_ja/messages_ja.properties
@@ -4,9 +4,9 @@ StepDefaultName=\u30b9\u30c6\u30c3\u30d7
 SequenceFlowDefaultName=\u30b7\u30fc\u30b1\u30f3\u30b9\u30d5\u30ed\u30fc
 MessageFlowDefaultName=\u30e1\u30c3\u30bb\u30fc\u30b8\u30d5\u30ed\u30fc
 WidgetDefaultLabel=\u30e9\u30d9\u30eb
-SubmitFormButtonDefaultLabel=\u9001\u4fe1
-PreviousFormButtonDefaultLabel=\u623b\u308b
-NextFormButtonDefaultLabel=\u6b21\u306e\u30da\u30fc\u30b8
+SubmitFormButtonDefaultLabel=Submit
+PreviousFormButtonDefaultLabel=Previous page
+NextFormButtonDefaultLabel=Next page
 CustomizedFormButtonDefaultLabel=\u30ab\u30b9\u30bf\u30de\u30a4\u30ba
 startEventDefaultName=\u958b\u59cb
 endEventDefaultName=\u7d42\u4e86
@@ -19,23 +19,23 @@ GeneralSection_Description=\u5b9a\u7fa9
 GeneralSection_TextAnnotation=\u30c6\u30ad\u30b9\u30c8\u6ce8\u91c8
 setConnectionEndCommandLabel=\u7d42\u7aef\u63a5\u7d9a\u30b3\u30de\u30f3\u30c9\u3092\u8a2d\u5b9a\u3057\u307e\u3059
 setConnectionsCommandLabel=\u63a5\u7d9a\u30b3\u30de\u30f3\u30c9\u3092\u8a2d\u5b9a\u3057\u307e\u3059
-TextFormFieldDefaultLabel=\u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
-TextAreaFormFieldDefaultLabel=\u30c6\u30ad\u30b9\u30c8 \u30a8\u30ea\u30a2
+TextFormFieldDefaultLabel=Text field
+TextAreaFormFieldDefaultLabel=Text area
 CheckBoxSingleFormFieldDefaultLabel=Checkbox
 CheckBoxMultipleFormFieldDefaultLabel=\u30c1\u30a7\u30c3\u30af \u30dc\u30c3\u30af\u30b9 \u30b0\u30eb\u30fc\u30d7
 ListFormFieldDefaultLabel=List
-PasswordFormFieldDefaultLabel=\u30d1\u30b9\u30ef\u30fc\u30c9
+PasswordFormFieldDefaultLabel=Password
 RadioFormFieldDefaultLabel=Radio buttons
 SelectFormFieldDefaultLabel=\u30c9\u30ed\u30c3\u30d7 \u30c0\u30a6\u30f3 \u30ea\u30b9\u30c8
-MessageInfoDefaultLabel=\u30e1\u30c3\u30bb\u30fc\u30b8
+MessageInfoDefaultLabel=Message
 TextInfoDefaultLabel=Text
 DateFormFieldDefaultLabel=Date
 FileWidgetDefaultLabel=File
 identifierTootltip=Groovy \u5f0f\u3067\u4f7f\u7528\u3059\u308bID
-intermediateMessageEventDefaultName=\u30e1\u30c3\u30bb\u30fc\u30b8
+intermediateMessageEventDefaultName=Message
 DurationFormFieldDefaultLabel=Duration
 GroupDefaultLabel=Group
-RichTextAreaFormFieldDefaultLabel=\u30ea\u30c3\u30c1 \u30c6\u30ad\u30b9\u30c8 \u30a8\u30ea\u30a2
+RichTextAreaFormFieldDefaultLabel=Rich text area
 IntermediateErrorCatchEventLabel=\u30a8\u30e9\u30fc
 IntermediateErrorCatchEventName=\u30a8\u30e9\u30fc
 daysLabel=\u65e5
@@ -54,21 +54,21 @@ BooleanType=Boolean
 DataType=Date
 JavaType=Java Object
 autoGenerateIdsLabel=\u81ea\u52d5 ID
-ImageWidgetDefaultLabel=\u753b\u50cf
+ImageWidgetDefaultLabel=Image
 HiddenWidgetDefaultLabel=Hidden
 FormButtonDefaultLabel=\u30dc\u30bf\u30f3
-TableDefaultLabel=Table
+TableDefaultLabel=\u30c6\u30fc\u30d6\u30eb
 switchPaletteAction=\u3059\u3079\u3066\u306e\u9805\u76ee\u3092\u8868\u793a/\u975e\u8868\u793a
 paletteSimple=\u30b7\u30f3\u30d7\u30eb
 paletteAdvanced=\u8a73\u7d30\u8a2d\u5b9a
-SpreadsheetDefaultLabel=\u7de8\u96c6\u53ef\u80fd\u306a\u30b0\u30ea\u30c3\u30c9
+SpreadsheetDefaultLabel=Editable grid
 signalEventDefaultName=\u30b7\u30b0\u30ca\u30eb
 paletteTooltipOnlyIcone=\u62e1\u5f35\u30d1\u30ec\u30c3\u30c8
 paletteTooltipFull=\u8a73\u7d30\u30d1\u30ec\u30c3\u30c8
 paletteTooltipSimple=\u30b7\u30f3\u30d7\u30eb \u30d1\u30ec\u30c3\u30c8
 Step_title=\u62bd\u8c61\u30bf\u30b9\u30af
 Step_desc=\u65b0\u3057\u3044\u62bd\u8c61\u30bf\u30b9\u30af\u3092\u4f5c\u6210\u3057\u307e\u3059
-Human_title=\u30d2\u30e5\u30fc\u30de\u30f3
+Human_title=\u30d2\u30e5\u30fc\u30de\u30f3\u30fb\u30bf\u30b9\u30af
 Human_desc=\u65b0\u3057\u3044\u30d2\u30e5\u30fc\u30de\u30f3\u30fb\u30bf\u30b9\u30af\u3092\u4f5c\u6210\u3057\u307e\u3059
 Subprocess_title=\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9
 Subprocess_desc=\u65b0\u3057\u3044\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u3092\u4f5c\u6210\u3057\u307e\u3059
@@ -109,7 +109,7 @@ EndError_desc=\u65b0\u3057\u3044\u30a8\u30e9\u30fc\u7d42\u4e86\u30a4\u30d9\u30f3
 Timer_title=\u30bf\u30a4\u30de\u30fc
 Timer_desc=\u65b0\u3057\u3044\u30bf\u30a4\u30de\u30fc\u30fb\u30a4\u30d9\u30f3\u30c8\u3092\u4f5c\u6210\u3057\u3001\u30d2\u30e5\u30fc\u30de\u30f3\u30fb\u30bf\u30b9\u30af\u304a\u3088\u3073\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u306e\u5883\u754c\u306b\u8ffd\u52a0\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059
 ThrowMessage_title=\u30e1\u30c3\u30bb\u30fc\u30b8\u30fb\u30b9\u30ed\u30fc\u30fb\u30a4\u30d9\u30f3\u30c8
-ThrowMessage_desc=\u3001\u65b0\u3057\u3044\u30e1\u30c3\u30bb\u30fc\u30b8\u30fb\u30b9\u30ed\u30fc\u30fb\u30a4\u30d9\u30f3\u30c8\u306f\u3092\u4f5c\u6210\u3057\u307e\u3059
+ThrowMessage_desc=\u65b0\u3057\u3044\u30e1\u30c3\u30bb\u30fc\u30b8\u30fb\u30b9\u30ed\u30fc\u30fb\u30a4\u30d9\u30f3\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059
 CatchMessage_title=\u30e1\u30c3\u30bb\u30fc\u30b8\u30fb\u30ad\u30e3\u30c3\u30c1\u30fb\u30a4\u30d9\u30f3\u30c8
 CatchMessage_desc=\u65b0\u3057\u3044\u30e1\u30c3\u30bb\u30fc\u30b8\u30fb\u30ad\u30e3\u30c3\u30c1\u30fb\u30a4\u30d9\u30f3\u30c8\u306e\u4f5c\u6210\u3057\u3001\u30bf\u30b9\u30af\u304a\u3088\u3073\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u306e\u5883\u754c\u306b\u8ffd\u52a0\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059
 ThrowSignal_title=\u30b7\u30b0\u30ca\u30eb\u30fb\u30b9\u30ed\u30fc\u30fb\u30a4\u30d9\u30f3\u30c8
@@ -146,15 +146,15 @@ Radio_title=Radio buttons
 Radio_desc=\u5024\u30ea\u30b9\u30c8\u3092\u63d0\u4f9b\u3059\u308b\u30d5\u30a3\u30fc\u30eb\u30c9
 Select_title=Select
 Select_desc=\u30c9\u30ed\u30c3\u30d7\u30c0\u30a6\u30f3\u30fb\u30ea\u30b9\u30c8\u3067\u8907\u6570\u306e\u5024\u3092\u63d0\u4f9b\u3059\u308b\u30d5\u30a3\u30fc\u30eb\u30c9
-TextBox_title=\u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
+TextBox_title=Text field
 TextBox_desc=\u5358\u7d14\u306a\u30c6\u30ad\u30b9\u30c8\u304c\u7de8\u96c6\u53ef\u80fd\u306a\u30d5\u30a3\u30fc\u30eb\u30c9
-TextArea_title=\u30c6\u30ad\u30b9\u30c8 \u30a8\u30ea\u30a2
+TextArea_title=Text area
 TextArea_desc=\u30e9\u30fc\u30b8 \u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
-RichTextArea_title=\u30ea\u30c3\u30c1 \u30c6\u30ad\u30b9\u30c8 \u30a8\u30ea\u30a2
+RichTextArea_title=Rich text area
 RichTextArea_desc=\u30ea\u30c3\u30c1 \u30c6\u30ad\u30b9\u30c8\u66f8\u5f0f\u8a2d\u5b9a\u306e\u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
 Text_title=Text
 Text_desc=\u7de8\u96c6\u4e0d\u53ef\u80fd\u306a\u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
-Message_title=\u30e1\u30c3\u30bb\u30fc\u30b8
+Message_title=Message
 Message_desc=\u7de8\u96c6\u4e0d\u53ef\u80fd\u306a\u30e9\u30fc\u30b8 \u30c6\u30ad\u30b9\u30c8 \u30d5\u30a3\u30fc\u30eb\u30c9
 Submit_title=\u9001\u4fe1
 Submit_desc=\u30d5\u30a9\u30fc\u30e0\u3092\u9001\u4fe1\u3059\u308b\u30dc\u30bf\u30f3
@@ -166,11 +166,11 @@ SimpleButton_title=Simple button
 SimpleButton_desc=Java \u30b9\u30af\u30ea\u30d7\u30c8\u3092\u5b9f\u884c\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3059\u308b\u30b7\u30f3\u30d7\u30eb\u306a\u30dc\u30bf\u30f3
 File_title=File
 File_desc=\u6dfb\u4ed8\u30d5\u30a1\u30a4\u30eb\u3068\u3057\u3066\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u307e\u305f\u306f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b\u30d5\u30a1\u30a4\u30eb
-Image_title=\u753b\u50cf
+Image_title=Image
 Image_desc=\u753b\u50cf\u3092\u8868\u793a
 Table_title=Table
 Table_desc=1 \u3064\u307e\u305f\u306f\u8907\u6570\u306e\u884c\u3092\u9078\u629e\u304c\u53ef\u80fd\u306a\u30c6\u30fc\u30d6\u30eb
-EditableGrid_title=\u7de8\u96c6\u53ef\u80fd\u306a\u30b0\u30ea\u30c3\u30c9
+EditableGrid_title=Editable grid
 EditableGrid_desc=\u7de8\u96c6\u53ef\u80fd\u306a\u30bb\u30eb\u3092\u542b\u3080\u30b0\u30ea\u30c3\u30c9
 Hidden_title=Hidden
 Hidden_desc=\u975e\u8868\u793a\u306e\u30a6\u30a3\u30b8\u30a7\u30c3\u30c8
@@ -269,9 +269,9 @@ diagramNameOrVersionMustBeChanged=\u30c0\u30a4\u30a2\u30b0\u30e9\u30e0\u540d\u30
 bonitaName=Bonita \u95a2\u6570
 bosProductName=Bonita BPM
 bosSPProductName=Bonita BPM \u30b5\u30d6\u30b9\u30af\u30ea\u30d7\u30b7\u30e7\u30f3
-bonitaStudioModuleName=Bonita \u30b9\u30bf\u30b8\u30aa
-bonitaPortalModuleName=Bonita\u30dd\u30fc\u30bf\u30eb
-bonitaEngineModuleName=Bonita \u30a8\u30f3\u30b8\u30f3
+bonitaStudioModuleName=Bonita BPM Studio
+bonitaPortalModuleName=Bonita BPM \u30dd\u30fc\u30bf\u30eb
+bonitaEngineModuleName=Bonita BPM Engine
 corporateName=BonitaSoft
 bonitaBPMCommunity=Bonita BPM \u30b3\u30df\u30e5\u30cb\u30c6\u30a3
 bonitaBPMTeamworkSubscription=Bonita BPM Teamwork \u30b5\u30d6\u30b9\u30af\u30ea\u30d7\u30b7\u30e7\u30f3
@@ -287,4 +287,13 @@ toolAlignHorizontalDesc=\u6c34\u5e73\u8ef8\u3067\u6574\u5217\u3055\u305b\u308b\u
 toolAlignVertical=\u5782\u76f4\u4f4d\u7f6e\u63c3\u3048
 toolAlignVerticalDesc=\u5782\u76f4\u8ef8\u3067\u6574\u5217\u3055\u305b\u308b\u56f3\u5f62\u3092\u9078\u629e
 fieldIsTooShort={0} \u304c\u77ed\u3059\u304e\u307e\u3059\u3002\u6700\u5c0f\u6587\u5b57\u6570\u306f {1} \u3067\u3059
+currentScript=\u5143\u306e\u30bd\u30fc\u30b9
+refactoredScript=\u30ea\u30d5\u30a1\u30af\u30bf\u30ea\u30f3\u30b0\u3055\u308c\u305f\u30bd\u30fc\u30b9
+refactorTitle={0} \u3092\u30ea\u30d5\u30a1\u30af\u30bf\u30ea\u30f3\u30b0\u3059\u308b
+reviewChangesMessageRefactoring={1} \u3067 {0} \u3092\u7f6e\u304d\u63db\u3048\u308b\u3068\u3001\u30b9\u30af\u30ea\u30d7\u30c8\u304a\u3088\u3073\u6761\u4ef6\u3067\u30de\u30a4\u30ca\u30fc\u306a\u30a8\u30e9\u30fc\u3092\u53ef\u80fd\u6027\u304c\u3042\u308a\u307e\u3059\u3002\n\u5909\u66f4\u3092\u78ba\u8a8d\u3057\u3001\u7de8\u96c6\u3057\u305f\u3044\u5834\u5408\u306f\u3001\u30b9\u30af\u30ea\u30d7\u30c8\u540d\u3092\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002\u540d\u524d\u306e\u5909\u66f4\u3092\u30ad\u30e3\u30f3\u30bb\u30eb\u3057\u305f\u3044\u5834\u5408\u306f\u3001 [\u30ad\u30e3\u30f3\u30bb\u30eb] \u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002
+reviewChangesMessageRemoving={0} \u306f\u3059\u3079\u3066\u306e\u30b9\u30af\u30ea\u30d7\u30c8\u3068\u6761\u4ef6\u304b\u3089\u524a\u9664\u3055\u308c\u3066\u3044\u307e\u3059\u3002\n\u5909\u66f4\u3092\u78ba\u8a8d\u3057\u3001\u7de8\u96c6\u3057\u305f\u3044\u5834\u5408\u306f\u3001\u30b9\u30af\u30ea\u30d7\u30c8\u540d\u3092\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002\u524a\u9664\u64cd\u4f5c\u3092\u30ad\u30e3\u30f3\u30bb\u30eb\u3057\u305f\u3044\u5834\u5408\u306f\u3001 [\u30ad\u30e3\u30f3\u30bb\u30eb] \u3092\u30af\u30ea\u30c3\u30af\u3057\u307e\u3059\u3002
+deleteFormFieldDialogTitle=\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
+askConfirmationForDeleting=\u6b21\u306e\u30c7\u30fc\u30bf\u3092\u672c\u5f53\u306b\u524a\u9664\u3057\u305f\u3044\u3067\u3059\u304b\uff1a
+removingWidgetReferences=\u30a6\u30a3\u30b8\u30a7\u30c3\u30c8\u306e\u53c2\u7167\u3092\u524a\u9664\u3057\u3066\u3044\u307e\u3059...
+removeTitle={0} \u3092\u524a\u9664\u3059\u308b
 
