--- a/translations/ja/org.bonitasoft.studio.common.repository.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.common.repository.nl_ja/messages_ja.properties
@@ -18,7 +18,7 @@ invalidArchive=\u9078\u629e\u3057\u305f\u30d5\u30a1\u30a4\u30eb\u306f\u6709\u52b
 invalidFileFormat=\u7121\u52b9\u306a\u30d5\u30a1\u30a4\u30eb \u30d5\u30a9\u30fc\u30de\u30c3\u30c8
 browseRepository=\u30ea\u30dd\u30b8\u30c8\u30ea\u3092\u53c2\u7167
 destinationPathMustBeADirectory=\u51fa\u529b\u5148\u306e\u30d1\u30b9\u306f\u3001\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059
-exportFinishMessage=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u304c\u6b63\u5e38\u306b\u7d42\u4e86\u3057\u307e\u3057\u305f
+exportFinishMessage={0} \u3078\u306e\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u304c\u6b63\u5e38\u306b\u5b8c\u4e86\u3057\u307e\u3057\u305f
 exportLabel=\u7d50\u679c\u3092\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u3057\u307e\u3059
 current=\u73fe\u5728
 readOnlyFileTitle=\u8aad\u307f\u53d6\u308a\u5c02\u7528\u30d5\u30a1\u30a4\u30eb
