--- a/translations/ja/org.bonitasoft.studio.connectors.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.connectors.nl_ja/messages_ja.properties
@@ -85,10 +85,10 @@ Edit=\u7de8\u96c6...
 activate=\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30c8
 automaticallyAddDriver=.bar\u30d5\u30a1\u30a4\u30eb\u306b\u81ea\u52d5\u7684\u306b\u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0
 BonitaPreferenceDialog_DBConnectors=DB\u30b3\u30cd\u30af\u30bf
-BonitaPreferencePage_DBConnectors_Description=\u9078\u629e\u3057\u305fDB\u30b3\u30cd\u30af\u30bf\u306b\u95a2\u9023\u3059\u308b\u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0\u3001\u524a\u9664\u3001\u307e\u305f\u306f\u30a2\u30af\u30c6\u30a3\u30d6\u306b\u3057\u307e\u3059\u3002
+BonitaPreferencePage_DBConnectors_Description=\u9078\u629e\u3057\u305fDB\u30b3\u30cd\u30af\u30bf\u306b\u95a2\u9023\u3059\u308b\u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0\u3001\u524a\u9664\u3057\u305f\u308a\u3001\u307e\u305f\u306f\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30c8\u3057\u307e\u3059\u3002
 databaseConnectorsProperties=\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9 \u30b3\u30cd\u30af\u30bf\u306e\u30d7\u30ed\u30d1\u30c6\u30a3
 databaseConnectorDriversWizardPageTitle=\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9 \u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0\u307e\u305f\u306f\u9078\u629e
-databaseConnectorDriversWizardPageDescription=\u9078\u629e\u3057\u305fDB\u30b3\u30cd\u30af\u30bf\u306b\u95a2\u9023\u3059\u308b\u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0\u3001\u524a\u9664\u3001\u307e\u305f\u306f\u30a2\u30af\u30c6\u30a3\u30d6\u306b\u3057\u307e\u3059\u3002
+databaseConnectorDriversWizardPageDescription=\u9078\u629e\u3057\u305fDB\u30b3\u30cd\u30af\u30bf\u306b\u95a2\u9023\u3059\u308b\u30c9\u30e9\u30a4\u30d0\u30fc\u3092\u8ffd\u52a0\u3001\u524a\u9664\u3057\u305f\u308a\u3001\u307e\u305f\u306f\u30a2\u30af\u30c6\u30a3\u30d9\u30fc\u30c8\u3057\u307e\u3059\u3002
 selectConnectorConfigurationWizardPageTitle=\u30b3\u30cd\u30af\u30bf\u306e\u69cb\u6210\u3092\u9078\u629e
 resultTitleLabel=\u7d50\u679c
 testConnectorPOJOWarning=\u8b66\u544a\: \u30e1\u30bd\u30c3\u30c9\u306f\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u547c\u3073\u51fa\u3057\u306b\u6642\u9593\u304c\u304b\u304b\u308a\u307e\u3059\uff01
@@ -119,7 +119,7 @@ oneColHint=\u30b3\u30cd\u30af\u30bf\u306f\u3001\u300clist\u300d\u3092\u8fd4\u305
 tableHint=\u30b3\u30cd\u30af\u30bf\u306f\u3001\u300clist \u306e list\u300d\u3092\u8fd4\u3057\u307e\u3059
 scriptMode=\u30b9\u30af\u30ea\u30d7\u30c8 \u30e2\u30fc\u30c9
 scriptModeDescription=\u30b3\u30cd\u30af\u30bf\u306f\u3001java object java.sql.ResultSet \u3092\u8fd4\u3057\u307e\u3059\u3002
-alwaysUseScriptingMode=\u5e38\u306b\u30b9\u30af\u30ea\u30d7\u30c8 \u30e2\u30fc\u30c9 \uff08\u3053\u306e\u30da\u30fc\u30b8\u306f\u4e8c\u5ea6\u3068\u8868\u793a\u3055\u308c\u307e\u305b\u3093\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059
+alwaysUseScriptingMode=\u5e38\u306b\u30b9\u30af\u30ea\u30d7\u30c8 \u30e2\u30fc\u30c9\uff08\u3053\u306e\u30da\u30fc\u30b8\u306f\u6b21\u56de\u304b\u3089\u8868\u793a\u3055\u308c\u307e\u305b\u3093\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059
 singleDatabaseOutputDescription=\u3042\u306a\u305f\u306f\u7d50\u679c\u30aa\u30d7\u30b7\u30e7\u30f3\u306b\u300c\u5358\u4e00\u306e\u5024\u300d\u3092\u9078\u629e\u3057\u3066\u3044\u307e\u3059\u3002\u4eca\u304b\u3089\u3042\u306a\u305f\u306e\u5909\u6570\u3068\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u3092\u5b9a\u7fa9\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 oneRowDatabaseOutputDescription=\u3042\u306a\u305f\u306f\u7d50\u679c\u30aa\u30d7\u30b7\u30e7\u30f3\u306b\u300c1 \u884c x  n \u5217\u300d\u3092\u9078\u629e\u3057\u3066\u3044\u307e\u3059\u3002\u4eca\u304b\u3089\u3042\u306a\u305f\u306e\u5909\u6570\u3068\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u3092\u5b9a\u7fa9\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 oneColDatabaseOutputDescription=\u3042\u306a\u305f\u306f\u7d50\u679c\u30aa\u30d7\u30b7\u30e7\u30f3\u306b\u300cn \u884c x  1 \u5217\u300d\u3092\u9078\u629e\u3057\u3066\u3044\u307e\u3059\u3002\u4eca\u304b\u3089\u3042\u306a\u305f\u306e\u5909\u6570\u3068\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u3092\u5b9a\u7fa9\u3057\u3066\u304f\u3060\u3055\u3044\u3002
@@ -131,3 +131,4 @@ alwaysUseScriptingModeOutputPref=\u5e38\u306b\u30b9\u30af\u30ea\u30d7\u30c8\u30e
 unsuportedExpressionTypeForTesting=\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u306a\u3044\u5f0f\u306e\u30bf\u30a4\u30d7\u3092\u30c6\u30b9\u30c8\u3059\u308b\:
 unresolvedPatternOrScriptExpression=\u5165\u529b\u30d1\u30e9\u30e1\u30fc\u30bf {0} \u306f\u3001\u9054\u6210\u3067\u304d\u306a\u3044\u53c2\u7167\u3092\u542b\u3080\u5f0f\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059
 unresolvedExpression=\u5165\u529b\u30d1\u30e9\u30e1\u30fc\u30bf {0} \u306f\u3001\u9054\u6210\u3067\u304d\u306a\u3044\u5f0f\u3092\u4f7f\u7528\u3057\u3066\u3044\u307e\u3059
+deleteConnectorDefinition=\u30b3\u30cd\u30af\u30bf\u306e\u5b9a\u7fa9\u3001\u95a2\u9023\u3059\u308b\u5b9f\u88c5\u304a\u3088\u3073\u4fdd\u5b58\u3055\u308c\u305f\u69cb\u6210\u3092\u524a\u9664\u3057\u307e\u3059\u304b\uff1f
