--- a/translations/ja/org.bonitasoft.studio.data.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.data.nl_ja/messages_ja.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=\u8981\u7d20\u304c\u9078\u629e\u3055\u308c\u3066\u3044
 moveDataWizardTitle=\u30c7\u30fc\u30bf\u3092\u79fb\u52d5
 moveDataWizardMessage=\u30c7\u30fc\u30bf\u3092\u30a2\u30af\u30c6\u30a3\u30d3\u30c6\u30a3\u307e\u305f\u306f\u30d7\u30ed\u30bb\u30b9\u306b\u79fb\u52d5\u3057\u307e\u3059
 deleteDataDialogTitle=\u3088\u308d\u3057\u3044\u3067\u3059\u304b\uff1f
-deleteDialogConfirmMessage=\u6b21\u306e\u30c7\u30fc\u30bf\u3092\u524a\u9664\u3057\u3066\u3044\u3044\u3067\u3059\u304b\uff1a
+deleteDialogConfirmMessage=\u6b21\u306e\u30c7\u30fc\u30bf\u3092\u672c\u5f53\u306b\u524a\u9664\u3057\u305f\u3044\u3067\u3059\u304b\uff1a
 moveData=\u79fb\u52d5...
 moveData_tooltip=\u30c7\u30fc\u30bf\u3092\u4ed6\u306e\u8981\u7d20\u306b\u79fb\u52d5\u3057\u307e\u3059
 dataNameIsEmpty=\u540d\u524d\u304c\u7a7a\u3067\u3059
@@ -81,3 +81,5 @@ documentType=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
 documentReferenceType=\u30c9\u30ad\u30e5\u30e1\u30f3\u30c8\u306e\u53c2\u7167
 xmlDefaultValueTooLongTitle=XML \u5165\u529b\u304c\u5927\u304d\u3059\u304e\u307e\u3059
 xmlDefaultValueTooLongMessage=\u53c2\u7167\u3055\u308c\u305f XML \u30d5\u30a1\u30a4\u30eb\u306f\u3001\u30c7\u30d5\u30a9\u30eb\u30c8\u5024\u3068\u3057\u3066\u4f7f\u7528\u3059\u308b\u306b\u306f\u5927\u304d\u3059\u304e\u307e\u3059
+editVariableTitle=\u5909\u6570\u3092\u7de8\u96c6
+editVariableDescription=Groovy \u30b9\u30af\u30ea\u30d7\u30c8\u3067\u5909\u6570\u3092\u4f7f\u7528\u3057\u3066\u3044\u308b\u5834\u5408\u3001 [OK] \u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068 \u300c\u30ea\u30d5\u30a1\u30af\u30bf\u30ea\u30f3\u30b0\u300d\u30a6\u30a3\u30f3\u30c9\u30a6\u304c\u8868\u793a\u3055\u308c\u3001\u5909\u66f4\u3092\u691c\u8a3c\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002
