--- a/translations/ja/org.bonitasoft.studio.decision.ui.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.decision.ui.nl_ja/messages_ja.properties
@@ -12,7 +12,7 @@ and=and
 takeTransition=\u9077\u79fb\u3059\u308b
 dontTakeTransition=\u9077\u79fb\u3057\u306a\u3044
 updateLine=\u6761\u4ef6\u884c\u3092\u66f4\u65b0
-tableDescriptionLabel=\u3053\u306e\u30c7\u30b7\u30b8\u30e7\u30f3 \u30c6\u30fc\u30d6\u30eb\u306f\u3001\u6761\u4ef6\u304c\u3059\u3079\u3066 true \u3068\u8a55\u4fa1\u3055\u308c\u305f\u5834\u5408\u3001\u305d\u306e\u884c\u306e\u53f3\u306b\u3042\u308b\u30a2\u30af\u30b7\u30e7\u30f3\u3092\u5b9f\u884c\u3057\u307e\u3059
+tableDescriptionLabel=\u3053\u306e\u30c7\u30b7\u30b8\u30e7\u30f3 \u30c6\u30fc\u30d6\u30eb\u306f\u3001\u6761\u4ef6\u304c\u3059\u3079\u3066 true \u3068\u8a55\u4fa1\u3055\u308c\u305f\u5834\u5408\u3001\u305d\u306e\u884c\u306e\u53f3\u306b\u3042\u308b\u30a2\u30af\u30b7\u30e7\u30f3\u3092\u9042\u884c\u3057\u307e\u3059
 selectALine=\u7de8\u96c6\u3059\u308b\u6761\u4ef6\u884c\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
 conditions=\u6761\u4ef6
 decision=\u30a2\u30af\u30b7\u30e7\u30f3
