--- a/translations/ja/org.bonitasoft.studio.diagram.form.properties.nl_ja/plugin_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.diagram.form.properties.nl_ja/plugin_ja.properties
@@ -14,6 +14,6 @@ form.appearance.removebutton.tab=\u30dc\u30bf\u30f3\u3092\u524a\u9664
 form.appearance.addbutton.tab=\u30dc\u30bf\u30f3\u3092\u8ffd\u52a0
 form.appearance.items.tab=\u9805\u76ee
 form.appearance.suggest.tab=SuggestBox \u306e\u30d1\u30cd\u30eb
-form.appearance.image.tab=\u753b\u50cf
+form.appearance.image.tab=Image
 form.useraids.tab=\u30e6\u30fc\u30b6\u30fc\u88dc\u52a9
 
