--- a/translations/ja/org.bonitasoft.studio.engine.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.engine.nl_ja/messages_ja.properties
@@ -15,7 +15,7 @@ RunButtonLabel=\u5b9f\u884c
 engineConfigurations=\u30a8\u30f3\u30b8\u30f3\u306e\u69cb\u6210
 defaultConfiguration=\u30c7\u30d5\u30a9\u30eb\u30c8\u306e\u69cb\u6210
 exporting=\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u3057\u3066\u3044\u307e\u3059...
-exportSuccessTitle=\u30d3\u30eb\u30c9
+exportSuccessTitle=\u30d3\u30eb\u30c9\u306b\u6210\u529f
 exportSuccessMsg=\u30d3\u30eb\u30c9\u306f\u6b63\u5e38\u306b\u7d42\u4e86\u3057\u307e\u3057\u305f \uff01
 initializingUserXP=\u30dd\u30fc\u30bf\u30eb\u3092\u521d\u671f\u5316\u3057\u3066\u3044\u307e\u3059...
 waitingForEngineToStart=\u6700\u521d\u306e\u5b9f\u884c\: \u30a8\u30f3\u30b8\u30f3\u306e\u30ed\u30fc\u30c9\u5b8c\u4e86\u3092\u5f85\u6a5f\u3057\u3066\u3044\u307e\u3059...
