--- a/translations/ja/org.bonitasoft.studio.importer.bar.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.importer.bar.nl_ja/messages_ja.properties
@@ -84,7 +84,7 @@ verticalHeaderMigrationDescription=\u5782\u76f4\u30d8\u30c3\u30c0\u30fc \u306e\u
 horizontalHeaderMigrationDescription=\u6c34\u5e73\u30d8\u30c3\u30c0\u30fc \u306e\u30b9\u30af\u30ea\u30d7\u30c8\u306f\u3001\u5f0f\u306b\u5909\u63db\u3055\u308c\u3066\u3044\u307e\u3059\u3002
 cellExpressionMigrationDescription=\u30c6\u30fc\u30d6\u30eb\u306e\u5185\u5bb9\u306f\u3001\u5f0f\u306b\u5909\u63db\u3055\u308c\u3066\u3044\u307e\u3059
 kpiBinding=KPI\u306e\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0
-bamProperty=BAM
+bamProperty=\u30e2\u30cb\u30bf\u30ea\u30f3\u30b0
 removeKpiMigrationDescription=KPI \u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u306e\u79fb\u884c\u306f\u3001\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u3066\u3044\u307e\u305b\u3093\u3001\u524a\u9664\u3055\u308c\u307e\u3057\u305f
 maxRowForPaginationMigrationDescription=\u6539\u30da\u30fc\u30b8\u8abf\u6574\u306e\u305f\u3081\u306e\u6700\u5927\u884c\u6570\u306f\u3001\u5f0f\u306b\u5909\u63db\u3055\u308c\u3066\u3044\u307e\u3059
 columnForInitialIndexMigrationDescription=\u6700\u521d\u306e\u30a4\u30f3\u30c7\u30c3\u30af\u30b9\u5217\u306f\u3001\u5f0f\u306b\u5909\u63db\u3055\u308c\u3066\u3044\u307e\u3059\u3002
