--- a/translations/ja/org.bonitasoft.studio.intro.nl_ja/plugin_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.intro.nl_ja/plugin_ja.properties
@@ -1,3 +1,3 @@
 #X-Generator: crowdin.net
-openWelcomePage_label=Bonita BPM \u30b9\u30bf\u30b8\u30aa\u3078\u3088\u3046\u3053\u305d
+openWelcomePage_label=Bonita \u30b9\u30bf\u30b8\u30aa\u3078\u3088\u3046\u3053\u305d
 
