--- a/translations/ja/org.bonitasoft.studio.properties.nl_ja/messages_ja.properties
+++ b/translations/ja/org.bonitasoft.studio.properties.nl_ja/messages_ja.properties
@@ -1,10 +1,10 @@
 #X-Generator: crowdin.net
 GeneralSection_Name=\u540d\u524d
-GeneralSection_Description=\u5b9a\u7fa9
+GeneralSection_Description=\u306e\u5b9a\u7fa9
 GeneralSection_Version=\u30d0\u30fc\u30b8\u30e7\u30f3
 defaultFlowLabel=\u30c7\u30d5\u30a9\u30eb\u30c8\u30fb\u30b7\u30fc\u30b1\u30f3\u30b9\u30d5\u30ed\u30fc
 activityType=\u30bf\u30b9\u30af\u30fb\u30bf\u30a4\u30d7
-activityType_task=\u30d2\u30e5\u30fc\u30de\u30f3
+activityType_task=\u30d2\u30e5\u30fc\u30de\u30f3\u30fb\u30bf\u30b9\u30af
 activityType_receiveTask=\u53d7\u4fe1
 activityType_sendTask=\u9001\u4fe1
 activityType_serviceTask=\u30b5\u30fc\u30d3\u30b9
@@ -59,7 +59,7 @@ FormsSection_ConfirmationTemplate=\u78ba\u8a8d\u306e\u30ec\u30a4\u30a2\u30a6\u30
 subprocess=\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9
 connectionConnection=\u6761\u4ef6
 ResourceSection_ProcessTemplate=\u30d7\u30ed\u30bb\u30b9\u306e\u30ec\u30a4\u30a2\u30a6\u30c8
-ResourceSection_PageTemplate=\u5165\u529b\u30d5\u30a9\u30fc\u30e0 \u30da\u30fc\u30b8\u30fb\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
+ResourceSection_PageTemplate=\u5165\u529b\u30d5\u30a9\u30fc\u30e0 \u30da\u30fc\u30b8 \u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
 ResourceSection_ErrorTemplate=\u30a8\u30e9\u30fc\u306e\u30ec\u30a4\u30a2\u30a6\u30c8
 ResourceSection_ProcessTemplate_hint=\u30d7\u30ed\u30bb\u30b9\u306e\u3059\u3079\u3066\u306e\u30d5\u30a9\u30fc\u30e0\u306b\u4f7f\u7528\u3055\u308c\u308b\u30ec\u30a4\u30a2\u30a6\u30c8
 ResourceSection_PageTemplate_hint=\u30d5\u30a9\u30fc\u30e0\u306e\u5165\u529b\u30da\u30fc\u30b8\u306e\u751f\u6210\u306b\u4f7f\u7528\u3059\u308b\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8
@@ -82,7 +82,7 @@ down=\u4e0b\u3078
 durationLabel=Duration
 priority=\u512a\u5148\u5ea6
 isMultiInstantiated=\u30de\u30eb\u30c1\u30fb\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9
-assignTo=\u30a2\u30b5\u30a4\u30f3\u3055\u308c\u305f\u4eba
+assignTo=>>>\u30de\u30c3\u30d4\u30f3\u30b0>>>
 sourceParameter=\u30bd\u30fc\u30b9\u30fb\u30c7\u30fc\u30bf
 targetParameter=\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u306e\u30c7\u30fc\u30bf
 messageEventAddWizardPageDesc=\u30e1\u30c3\u30bb\u30fc\u30b8\u306f\u3001\u5225\u306e\u30d7\u30fc\u30eb\u306b\u9001\u4fe1\u3055\u308c\u307e\u3059\u3002\n\u8ee2\u9001\u5148\u306e\u30d7\u30fc\u30eb\u3067\u4f7f\u7528\u3059\u308b\u30c7\u30fc\u30bf\u3092\u3053\u3053\u3067\u8ffd\u52a0\u3057\u307e\u3059\u3002
@@ -102,7 +102,7 @@ timerCondition=\u30bf\u30a4\u30de\u30fc\u6761\u4ef6
 timerConditionWizardTitle=\u30bf\u30a4\u30de\u30fc\u6761\u4ef6\u3092\u7de8\u96c6
 eventNameLabel=\u30bf\u30fc\u30b2\u30c3\u30c8\u8981\u7d20
 processNameLabel=\u30bf\u30fc\u30b2\u30c3\u30c8\u306e\u30d7\u30fc\u30eb
-isMandatory=\u5fc5\u9808
+isMandatory=\u306f\u5fc5\u9808\u3067\u3059\u3002
 addTargetEventDialogTitle=\u30bf\u30fc\u30b2\u30c3\u30c8\u306e\u30a4\u30d9\u30f3\u30c8\u3092\u8ffd\u52a0
 gotoLabel=\u9032\u3080
 fromLinksLabel=\u30ea\u30f3\u30af\u5143
@@ -216,7 +216,7 @@ and=AND
 takeTransition=\u9077\u79fb\u3059\u308b
 dontTakeTransition=\u9077\u79fb\u3057\u306a\u3044
 emptyName=\u540d\u524d\u304c\u7a7a\u3067\u3059
-operationExplanation=\u30c7\u30fc\u30bf\u64cd\u4f5c\u3068\u306f\u3001\u30bf\u30b9\u30af\u304c\u5b9f\u884c\u3055\u308c\u305f\u3068\u304d\u306b\u5909\u6570\u5024\u3092\u66f4\u65b0\u3059\u308b\u30a2\u30af\u30b7\u30e7\u30f3\u3067\u3059\u3002\u3053\u306e\u30bf\u30b9\u30af\u3067\u5b9f\u884c\u3055\u308c\u308b\u3079\u304d\u64cd\u4f5c\u306e\u30ea\u30b9\u30c8\u3092\u63d0\u4f9b\u3057\u307e\u3059\u3002\u64cd\u4f5c\u306f\u30ea\u30b9\u30c8\u3055\u308c\u3066\u3044\u308b\u9806\u756a\u306b\u5b9f\u884c\u3055\u308c\u307e\u3059\u3002
+operationExplanation=\u30c7\u30fc\u30bf\u64cd\u4f5c\u3068\u306f\u3001\u30bf\u30b9\u30af\u304c\u9042\u884c\u3055\u308c\u305f\u3068\u304d\u306b\u5909\u6570\u5024\u3092\u66f4\u65b0\u3059\u308b\u30a2\u30af\u30b7\u30e7\u30f3\u3067\u3059\u3002\u3053\u306e\u30bf\u30b9\u30af\u3067\u9042\u884c\u3055\u308c\u308b\u3079\u304d\u64cd\u4f5c\u306e\u30ea\u30b9\u30c8\u3092\u63d0\u4f9b\u3057\u307e\u3059\u3002\u64cd\u4f5c\u306f\u30ea\u30b9\u30c8\u3055\u308c\u3066\u3044\u308b\u9806\u756a\u306b\u5b9f\u884c\u3055\u308c\u307e\u3059\u3002
 highestPriority=\u6700\u9ad8
 lowestPriority=\u6700\u4f4e
 underNormalPriority=\u4f4e
@@ -273,7 +273,7 @@ looknfeelPropertySectionDescription=\u30eb\u30c3\u30af\uff06\u30d5\u30a3\u30fc\u
 resourcePropertySectionDescription=\u30ea\u30bd\u30fc\u30b9\u306f\u3001\u30d7\u30ed\u30bb\u30b9\u306e\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306b\u3088\u3063\u3066\u4f7f\u7528\u3055\u308c\u308b\u30d5\u30a1\u30a4\u30eb\u3067\u3059\u3002\u3053\u308c\u3089\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u306b\u683c\u7d0d\u3055\u308c\u307e\u3059\u3002\u30d7\u30ed\u30bb\u30b9\u30fb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3067\u5fc5\u8981\u306a\u30d5\u30a1\u30a4\u30eb\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002\u307e\u305f\u3001\u30ea\u30bd\u30fc\u30b9\u30d5\u30a1\u30a4\u30eb\u3092\u7de8\u96c6\u3057\u3001JSP (JavaServer \u30da\u30fc\u30b8) \u306e\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u305d\u308c\u3092\u5909\u66f4\u3059\u308b\u304b\u3001\u307e\u305f\u306f\u76f4\u63a5\u65b0\u3057\u3044\u3082\u306e\u3092\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3057\u3066\u3001\u30ed\u30b0\u30a4\u30f3 \u30da\u30fc\u30b8\u3092\u69cb\u6210\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3059\u308b\u3068\u304d\u306b\u3001\u5fc5\u8981\u306a\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664\u3057\u306a\u3044\u3088\u3046\u306b\u6ce8\u610f\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 parametersMappingSectionDescription=\u3053\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u306f\u3001\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u3068\u89aa\u30d7\u30ed\u30bb\u30b9\u5185\u306e\u5909\u6570\u306e\u95a2\u4fc2\u3092\u5b9a\u7fa9\u3057\u307e\u3059\u3002\u5909\u6570\u306e\u5024\u3092\u81ea\u52d5\u7684\u306b\u30de\u30c3\u30d7\u3059\u308b\u3088\u3046\u306b\u69cb\u6210\u3059\u308b\u3053\u3068\u304c\u3067\u304d\u307e\u3059\u3002\u305d\u3057\u3066\u30d7\u30ed\u30bb\u30b9\u5909\u6570\u3068\u30b5\u30d6\u30d7\u30ed\u30bb\u30b9\u9593\u306e\u30de\u30c3\u30d4\u30f3\u30b0\u3092\u660e\u793a\u7684\u306b\u6307\u5b9a\u3059\u308b\u3053\u3068\u3082\u3067\u304d\u307e\u3059\u3002
 userXPSectionDescription=\u3053\u308c\u306f\u3001\u30dd\u30fc\u30bf\u30eb\u3067\u306e\u30bf\u30b9\u30af\u306b\u3064\u3044\u3066\u8868\u793a\u3055\u308c\u308b\u60c5\u5831\u3067\u3059\u3002\u30bf\u30b9\u30af\u306e\u63a8\u5b9a\u6642\u9593\u306f\u3001\u30bf\u30b9\u30af\u304c\u958b\u59cb\u3055\u308c\u305f\u5f8c\u306b\u5fc5\u8981\u306a\u6b8b\u308a\u6642\u9593\u3092\u8a08\u7b97\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002\u30dd\u30fc\u30bf\u30eb\u60c5\u5831\u3092\u6307\u5b9a\u3057\u306a\u3044\u5834\u5408\u306f\u3001 [\u5168\u822c] \u30da\u30a4\u30f3\u306e\u8aac\u660e\u3068\u540d\u524d\u304c\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002
-confirmationPropertySectionDescription=\u78ba\u8a8d\u30e1\u30c3\u30bb\u30fc\u30b8\u306f\u3001\u3042\u308b\u30e6\u30fc\u30b6\u30fc\u306b\u3088\u3063\u3066\u5b9f\u884c\u3055\u308c\u305f\u30b9\u30c6\u30c3\u30d7\u306e\u30b7\u30fc\u30b1\u30f3\u30b9\u30d5\u30ed\u30fc\u306e\u7d42\u4e86\u6642\u306b\u8868\u793a\u3055\u308c\u3001\u305d\u308c\u4ee5\u964d\u306e\u30a2\u30af\u30b7\u30e7\u30f3\u304c\u5fc5\u8981\u3067\u306a\u3044\u3053\u3068\u3092\u793a\u3057\u307e\u3059\u3002\u3053\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u30ec\u30a4\u30a2\u30a6\u30c8\u3068\u5185\u5bb9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
+confirmationPropertySectionDescription=\u78ba\u8a8d\u30e1\u30c3\u30bb\u30fc\u30b8\u306f\u3001\u3042\u308b\u30e6\u30fc\u30b6\u30fc\u306b\u3088\u3063\u3066\u9042\u884c\u3055\u308c\u305f\u30b9\u30c6\u30c3\u30d7\u306e\u30b7\u30fc\u30b1\u30f3\u30b9\u30d5\u30ed\u30fc\u306e\u7d42\u4e86\u6642\u306b\u8868\u793a\u3055\u308c\u3001\u305d\u308c\u4ee5\u964d\u306e\u30a2\u30af\u30b7\u30e7\u30f3\u304c\u5fc5\u8981\u3067\u306a\u3044\u3053\u3068\u3092\u793a\u3057\u307e\u3059\u3002\u3053\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u30ec\u30a4\u30a2\u30a6\u30c8\u3068\u5185\u5bb9\u3092\u6307\u5b9a\u3057\u307e\u3059\u3002
 loopSectionDescription=\u53cd\u5fa9\u51e6\u7406\u306f\u3001\u6761\u4ef6\u304c\u6e80\u305f\u3055\u308c\u308b\u307e\u3067\u3001\u30bf\u30b9\u30af\u307e\u305f\u306f\u30b3\u30fc\u30eb\u30a2\u30af\u30c6\u30a3\u30d3\u30c6\u30a3\u3092\u7e70\u308a\u8fd4\u3057\u5b9f\u884c\u3059\u308b\u3053\u3068\u3092\u610f\u5473\u3057\u307e\u3059\u3002\u3053\u306e\u6761\u4ef6\u306f\u3001\u5f0f\u307e\u305f\u306f\u53cd\u5fa9\u56de\u6570\u3067\u6307\u5b9a\u3057\u307e\u3059\u3002\u30bf\u30b9\u30af\u306e\u8907\u6570\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u3092\u540c\u6642\u4e26\u884c\u3067\u5b9f\u884c\u3059\u308b\u5834\u5408\u306f\u3001\u30de\u30eb\u30c1\u30fb\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30bf\u30b9\u30af\u306e\u8907\u6570\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u3092\uff11\u3064\uff11\u3064\u9023\u7d9a\u7684\uff08\u30b7\u30fc\u30b1\u30f3\u30b7\u30e3\u30eb\uff09\u306b\u5b9f\u884c\u3059\u308b\u5834\u5408\u306f\u3001\u6a19\u6e96\u7684\u306a\u30eb\u30fc\u30d7\u51e6\u7406\u3092\u30c1\u30a7\u30c3\u30af\u3057\u307e\u3059\u3002\u30bf\u30b9\u30af\u3092\u4e00\u5ea6 \uff08\u7e70\u308a\u8fd4\u3057\u306a\u3057\uff09\u3060\u3051\u5b9f\u884c\u3059\u308b\u5834\u5408\u3070\u3001\u300c\u306a\u3057\u300d\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002\u30bf\u30b9\u30af\u306e\u8907\u6570\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u3092\uff11\u3064\uff11\u3064\u5b9f\u884c\u3059\u308b\u306b\u306f\u3001\u30de\u30eb\u30c1 \u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u306e\u30b7\u30fc\u30b1\u30f3\u30b7\u30e3\u30eb\u51e6\u7406\u3001\u307e\u305f\u306f\u30eb\u30fc\u30d7\u51e6\u7406\u3092\u4f7f\u7528\u3067\u304d\u307e\u3059\u3002
 correlationHelp=\u76f8\u4e92\u95a2\u4fc2\u30ad\u30fc\u3068\u306f\u3001\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u9001\u4fe1\u3084\u53d7\u4fe1\u3092\u9069\u5207\u306a\u30d7\u30ed\u30bb\u30b9\n\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u3078\u30eb\u30fc\u30c6\u30a3\u30f3\u30b0\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3055\u308c\u308bID\u3067\u3059\u3002
 exportSuccessfullTitle=\u7d50\u679c\u3092\u30a8\u30af\u30b9\u30dd\u30fc\u30c8\u3057\u307e\u3059
@@ -330,4 +330,6 @@ generateFixedDateLabel=\u56fa\u5b9a\u65e5\u4ed8\u306e\u8868\u73fe\u5f0f\u3092\u7
 selectDurationLabel=\u671f\u9593\u3092\u9078\u629e
 generateDurationLabel=\u671f\u9593\u306e\u8868\u73fe\u5f0f\u3092\u751f\u6210
 notAValidInput=\u5024 [{0}] \u306f\u6709\u52b9\u306a\u5165\u529b\u3067\u306f\u3042\u308a\u307e\u305b\u3093
-
+transientDataWarning=\u4e00\u6642\u7684\u306a\u30c7\u30fc\u30bf\u306e\u30a2\u30af\u30c6\u30a3\u30d3\u30c6\u30a3\u64cd\u4f5c\u306f\u3001\u5c06\u6765\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u3067\u30b5\u30dd\u30fc\u30c8\u3055\u308c\u306a\u3044\u3053\u3068\u3092\u6ce8\u610f\u3057\u3066\u304f\u3060\u3055\u3044\u3002
+errorDisplayLabelMaxLength=\u8868\u793a\u30c6\u30ad\u30b9\u30c8\u304c\u9577\u3059\u304e\u307e\u3059\u3002\u6700\u5927\u6587\u5b57\u6570\u306f {0} \u3067\u3059\u3002
+warningDisplayLabelMaxLength=\u8868\u793a\u30e9\u30d9\u30eb\u306e\u6700\u5927\u6587\u5b57\u6570\u306f{0} \u3001\u8aac\u660e\u306f{1} \u3067\u3059\u3002
