--- a/translations/pt/org.bonitasoft.studio.actors.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.actors.nl_pt/messages_pt.properties
@@ -195,15 +195,16 @@ importOrganizationSuccessfullTitle=Importa\u00e7\u00e3o bem sucedida
 importOrganizationSuccessfullMessage=Organiza\u00e7\u00e3o foi importada com \u00eaxito.
 errorSelectionGroups=Voc\u00ea n\u00e3o pode selecionar um grupo e um dos seus afiliados.
 exportActorFilterTitle=Exportar filtro de ator
+addActor=Adicionar...
+initiator=Iniciador
+newActor=Novo ator
+actorWizardPageTitle=Adicionar um novo ator
 organizationHasBeenModifiedTitle=Warning\: Organiza\u00e7\u00e3o foi modificada
 organizationHasBeenModifiedMessage={0} foi modificado. Recomenda-se re-public\u00e1-lo. Quer fazer isso agora?
 doNotDisplayAgain=N\u00e3o mostrar novamente.
 userDoesntExistAnymoreTitle=Organiza\u00e7\u00e3o n\u00e3o foi publicada
 userDoesntExistAnymore=Organiza\u00e7\u00e3o n\u00e3o foi publicada. O usu\u00e1rio padr\u00e3o {0} n\u00e3o existe mais. Por favor configurar outro usu\u00e1rio padr\u00e3o no menu "Organiza\u00e7\u00e3o/Publicar ...".
-addActor=Adicionar...
-initiator=Iniciador
-newActor=Novo ator
-actorWizardPageTitle=Adicionar um novo ator
 UserDoesntExistError=O usu\u00e1rio {0} n\u00e3o existe na organiza\u00e7\u00e3o atual. Por favor, forne\u00e7a um outro nome de usu\u00e1rio.
-updateActorReferences=Atualizando as referências de ator
+updateActorReferences=Atualizando as refer\u00eancias de ator
 refactoringActorMappings=Atualizando os mapeamentos de ator...
+
