--- a/translations/pt/org.bonitasoft.studio.data.nl_pt/messages_pt.properties
+++ b/translations/pt/org.bonitasoft.studio.data.nl_pt/messages_pt.properties
@@ -37,7 +37,7 @@ selectOnlyOneElementTitle=Nenhum elemento ou elementos em excesso foram selecion
 moveDataWizardTitle=Mover dados
 moveDataWizardMessage=Mover dados para uma atividade ou processo
 deleteDataDialogTitle=Tem certeza?
-deleteDialogConfirmMessage=Voc\u00ea realmente deseja excluir os seguintes dados\:
+deleteDialogConfirmMessage=Realmente deseja remover os seguintes dados \\\:
 moveData=Mover...
 moveData_tooltip=Mover os dados para um outro elemento
 dataNameIsEmpty=Nome est\u00e1 vazio
@@ -81,6 +81,5 @@ documentType=Documento
 documentReferenceType=Refer\u00eancia de documento
 xmlDefaultValueTooLongTitle=Arquivo XML grande demais
 xmlDefaultValueTooLongMessage=O arquivo XML escolhido \u00e9 grande demais para ser usado como valor padr\u00e3o
-editVariableTitle=Editar uma variável
-editVariableDescription=Ao clicar em OK, se a variável é usada em um script Groovy, a janela de refatoração será exibida e você poderá validar as alterações.
-deleteDialogConfirmMessageRealmente deseja remover os seguintes dados \:
+editVariableTitle=Editar uma vari\u00e1vel
+editVariableDescription=Ao clicar em OK, se a vari\u00e1vel \u00e9 usada em um script Groovy, a janela de refatora\u00e7\u00e3o ser\u00e1 exibida e voc\u00ea poder\u00e1 validar as altera\u00e7\u00f5es.
